--- a/images/chan-5-kg-kq-khong-song/config.ini
+++ b/images/chan-5-kg-kq-khong-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-khong-song.html
 lastopen = 2024-06-09 23:49:54
 
 [search]
-lastsearch = 2024-07-21 06:31:59
+lastsearch = 2024-07-21 11:20:23
 
 [demxanh.com]
 match = 26.3%%
@@ -49,7 +49,7 @@ url = https://nguyendang.com.vn/
 [www.vinmec.com]
 match = -65.2%%
 title = Siêu âm hình thái học là gì? Ý nghĩa và kết quả
-url = https://www.vinmec.com/vi/tin-tuc/thong-tin-suc-khoe/san-phu-khoa-va-ho-tro-sinh-san/sieu-am-hinh-thai-hoc-la-gi-y-nghia-va-ket-qua/
+url = https://www.vinmec.com/vie/bai-viet/sieu-am-hinh-thai-hoc-la-gi-y-nghia-va-ket-qua-vi
 
 [saigontourist.edu.vn]
 match = -26.1%%
@@ -138,7 +138,7 @@ url = https://pkcollegecontai.ac.in/
 
 [medlatec.vn]
 match = -100.0%%
-title = FibroScan - kỹ thuật siêu âm đàn hồi gan an toàn, chính ...
+title = kỹ thuật siêu âm đàn hồi gan an toàn, chính xác, hiệu quả
 url = https://medlatec.vn/tin-tuc/fibroscan--ky-thuat-sieu-am-dan-hoi-gan-an-toan-chinh-xac-hieu-qua-s154-n6696
 
 [antoanthanhpho.vn]
