--- a/images/chieu-gap-dai-loan-18/config.ini
+++ b/images/chieu-gap-dai-loan-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-18.html
 lastopen = 2024-06-09 22:42:55
 
 [search]
-lastsearch = 2024-07-21 09:51:10
+lastsearch = 2024-07-21 11:20:57
 
 [tiki.vn]
 match = -47.6%%
@@ -22,9 +22,9 @@ title = THỦ TỤC XIN CẤP ĐỔI HỘ CHIẾU ĐÀI LOAN
 url = https://www.roc-taiwan.org/vnsgn_vi/post/91.html
 
 [www.tiktok.com]
-match = 0.0%%
-title = 
-url = https://www.tiktok.com/@duongdeofficial/video/7315000665816829186
+match = -9.5%%
+title = Phim Mai Có Chiếu Ở Taiwan Không
+url = https://www.tiktok.com/discover/phim-mai-có-chiếu-ở-taiwan-không?lang=en
 
 [www.tripadvisor.com.vn]
 match = -42.9%%
@@ -87,9 +87,9 @@ title = Đài Loan (Trung Quốc) tiếp tục tìm kiếm 18 người mất tí
 url = https://nhandan.vn/dai-loan-trung-quoc-tiep-tuc-tim-kiem-18-nguoi-mat-tich-sau-dong-dat-post803249.html
 
 [www.diepxuan.com]
-match = 19.0%%
-title = Chiếu gấp Đài Loan 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-180x200.html
+match = 14.3%%
+title = Chiếu gấp Đài Loan 140x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-gap-dai-loan-140x190.html
 
 [znews.vn]
 match = -104.8%%
