--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-21 09:50:15
+lastsearch = 2024-07-21 11:21:52
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -97,8 +97,8 @@ title = luật poker omaha-App Store5.93.517
 url = https://sv.ut.edu.vn/newsr4ru7ie5.html
 
 [yamaha-motor.com.vn]
-match = -43.8%%
-title = PG-1 - Yamaha Motor Việt Nam
+match = -250.0%%
+title = PG-1
 url = https://yamaha-motor.com.vn/xe/pg-1-bns1/
 
 [tuoitre.vn]
@@ -212,9 +212,9 @@ title = Lãnh 16 năm tù vì bán ma túy
 url = https://www.baobariavungtau.com.vn/phap-luat/202406/lanh-16-nam-tu-vi-ban-ma-tuy-1013445/
 
 [congan.com.vn]
-match = -200.0%%
-title = Trên đường đi học về, nam sinh ngã vào gầm xe đầu kéo ...
-url = https://congan.com.vn/giao-thong-24h/tren-duong-di-hoc-ve-nam-sinh-nga-vao-gam-xe-dau-keo-bi-can-tu-vong_164835.html
+match = -137.5%%
+title = Xe "hổ vồ" gây tai nạn khiến 4 mẹ con tử vong
+url = https://congan.com.vn/giao-thong-24h/xe-ho-vo-gay-tai-nan-khien-4-me-con-tu-vong-lai-xe-dinh-ma-tuy_164925.html
 
 [hvnh.edu.vn]
 match = -225.0%%
