--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-21 09:45:42
+lastsearch = 2024-07-21 11:21:41
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -12,9 +12,9 @@ title = Hướng dẫn đo size lắc và vòng tay
 url = https://www.pnj.com.vn/blog/huong-dan-do-size-lac-va-vong-tay/
 
 [baomoi.com]
-match = -125.0%%
-title = Bắt quả tang hơn 10 phụ nữ đánh bạc ăn tiền
-url = https://baomoi.com/bat-qua-tang-hon-10-phu-nu-danh-bac-an-tien-c49688237.epi
+match = -168.8%%
+title = Nóp cỏ bàng và chiếu lác - Tạp chí Văn Hóa & Phát Triển
+url = https://baomoi.com/nop-co-bang-va-chieu-lac-c40335029.epi
 
 [www.thegioididong.com]
 match = -231.2%%
@@ -63,8 +63,8 @@ url = https://moveek.com/rap/lotte-kosmo-tay-ho/
 
 [baolongan.vn]
 match = -31.2%%
-title = Giữ nghề dệt chiếu Long Cang
-url = https://baolongan.vn/giu-nghe-det-chieu-long-cang-a169502.html
+title = Nhớ nghề dệt chiếu quê tôi
+url = https://baolongan.vn/nho-nghe-det-chieu-que-toi-a168262.html
 
 [www.youtube.com]
 match = -200.0%%
@@ -72,9 +72,9 @@ title = Bán Trà Đá 15K Chơi Chiêu Tráo 500K Đụng Ngay Con Trai ...
 url = https://www.youtube.com/watch?v=MIO-5nY_e5g
 
 [books.google.com]
-match = -150.0%%
-title = American Soap Journal and Manufacturing Chemist
-url = https://books.google.com/books?id=EF1YAAAAYAAJ&pg=RA1-PA99&lpg=RA1-PA99&dq=chieu+lac+soc+16&source=bl&ots=sI9Ehyayy4&sig=ACfU3U0z2WwobSi9piU2FBntfXnC4oi6lw&hl=en&sa=X&ved=2ahUKEwi8wbmZ2baHAxV-lu4BHdA1Cv8Q6AF6BAgjEAM
+match = -231.2%%
+title = Tạp chí cộng sản: cơ quan lý luận và chính trị của Đảng cộng ...
+url = https://books.google.com/books?id=rq3aAAAAMAAJ&pg=RA6-PA66&lpg=RA6-PA66&dq=chieu+lac+soc+16&source=bl&ots=W7J6xP5dSK&sig=ACfU3U0F3FrHgj6TPCYMLTZZEHdkmwEAkA&hl=en&sa=X&ved=2ahUKEwjX2b6fpLeHAxXrElkFHaNMAzkQ6AF6BAgeEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
@@ -132,9 +132,9 @@ title = Dự báo thời tiết TP.HCM ngày 16/7: Mưa dông về chiều ...
 url = https://vtcnews.vn/du-bao-thoi-tiet-tp-hcm-ngay-16-7-mua-dong-ve-chieu-nhiet-do-giam-ar883459.html
 
 [vietstock.vn]
-match = -206.2%%
-title = Phân tích kỹ thuật chứng khoán Việt Nam: Tuần 22-26/07 ...
-url = https://vietstock.vn/2024/07/phan-tich-ky-thuat-chung-khoan-viet-nam-tuan-22-26072024-585-1209560.htm
+match = -218.8%%
+title = Phân tích kỹ thuật phiên chiều 16/07: Tâm lý lạc quan quay ...
+url = https://vietstock.vn/2024/07/phan-tich-ky-thuat-phien-chieu-1607-tam-ly-lac-quan-quay-tro-lai-585-1207761.htm
 
 [www.dcine.vn]
 match = 20.0%%
