--- a/images/nem-caosu-thang-loi-160x200x10/config.ini
+++ b/images/nem-caosu-thang-loi-160x200x10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-thang-loi-160x200x10.html
 lastopen = 2024-06-07 01:42:38
 
 [search]
-lastsearch = 2024-07-20 23:14:28
+lastsearch = 2024-07-21 11:19:08
 
 [congtynemthangloi.com]
 match = -46.7%%
@@ -13,13 +13,13 @@ url = https://congtynemthangloi.com/nem-cao-su-thien-nhien-thang-loi-va-bang-gia
 
 [khonemgiatot.vn]
 match = 33.3%%
-title = NỆM CAO SU NON THẮNG LỢI
-url = https://khonemgiatot.vn/nem-thang-loi-chinh-hang-100
+title = NỆM CAO SU GOLDLATEX THẮNG LỢI
+url = https://khonemgiatot.vn/nem-cao-su-goldlatex-thang-loi
 
 [nemcaosuthangloi.vn]
-match = 33.3%%
-title = NỆM CAO SU NON THẮNG LỢI
-url = https://nemcaosuthangloi.vn/nem-cao-su-non-thang-loi.html
+match = 36.7%%
+title = NỆM CAO SU HOẠT TÍNH THẮNG LỢI
+url = https://nemcaosuthangloi.vn/nem-cao-su-hoat-tinh-thang-loi.html
 
 [noithatdaithanh.vn]
 match = 36.7%%
@@ -57,9 +57,9 @@ title = Bảng Giá nệm cao su non thắng lợi chính hãng giá rẻ nhát
 url = https://khonemthangloi.vn/product/gia-nem-thang-loi/
 
 [nemthangloi.vn]
-match = 33.3%%
-title = Nệm Cao Su Non Thắng Lợi
-url = http://nemthangloi.vn/san-pham/nem-cao-su-nhan-tao-30.html
+match = 30.0%%
+title = Nệm Cao Su Non Cao Cấp Thắng Lợi
+url = http://nemthangloi.vn/san-pham/nem-cao-su-nhan-tao-gam-nhung-thang-loi-10.html
 
 [nem.vn]
 match = 23.3%%
