--- a/images/chan-hoi-mai-rua/config.ini
+++ b/images/chan-hoi-mai-rua/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-mai-rua.html
 lastopen = 2024-06-09 23:40:13
 
 [search]
-lastsearch = 2024-07-21 01:45:35
+lastsearch = 2024-07-21 11:37:12
 
 [shopee.vn]
 match = -162.5%%
@@ -17,9 +17,9 @@ title = Hoi Chan (@hoichandraws)
 url = https://www.instagram.com/hoichandraws/?hl=en
 
 [vi.wikipedia.org]
-match = -75.0%%
-title = Rùa Hoàn Kiếm – Wikipedia tiếng Việt
-url = https://vi.wikipedia.org/wiki/Rùa_Hoàn_Kiếm
+match = 28.6%%
+title = Con rùa vũ trụ
+url = https://vi.wikipedia.org/wiki/Con_rùa_vũ_trụ
 
 [tuongdamynghe.com]
 match = 6.2%%
