--- a/images/chieu-gap-dai-loan-lua-16/config.ini
+++ b/images/chieu-gap-dai-loan-lua-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-16.html
 lastopen = 2024-06-09 21:33:58
 
 [search]
-lastsearch = 2024-07-21 04:45:07
+lastsearch = 2024-07-21 11:45:17
 
 [www.youtube.com]
-match = -48.0%%
-title = Đài Loan Tung Chiêu Bóp Nghẹt Dã Tâm Của Trung Quốc
-url = https://www.youtube.com/watch?v=0--4nk6XRjE
+match = -88.0%%
+title = Lồng Tiếng | CHỊU THUA TRƯỚC EM - Tập 16 | Trọn Bộ Phim ...
+url = https://www.youtube.com/watch?v=Ieb3ZcvtGyI
 
 [www.voatiengviet.com]
 match = -92.0%%
@@ -62,9 +62,9 @@ title = 16 người Việt bị bắt tại Đài Loan vì lừa xuyên biên gi
 url = https://vietnamnet.vn/16-nguoi-viet-bi-bat-tai-dai-loan-vi-lua-xuyen-bien-gioi-497646.html
 
 [www.facebook.com]
-match = -124.0%%
-title = 20240416 Bản tin tiếng Việt PTS Đài Loan 公視越南語新聞 ...
-url = https://www.facebook.com/ptsvietnamesenews/videos/20240416-bản-tin-tiếng-việt-pts-đài-loan-公視越南語新聞/452366227450173/
+match = 25.0%%
+title = Xin chào, tôi ở Đài Loan
+url = https://www.facebook.com/toiodailoan/?locale=vi_VN
 
 [baotintuc.vn]
 match = -72.0%%
