--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-07-21 10:45:58
+lastsearch = 2024-07-21 12:19:05
 
 [hoa18.com]
 match = -84.2%%
@@ -157,9 +157,9 @@ title = Soái Ca Comic – Truyện Tranh Online
 url = https://soaicacomic.top/
 
 [trithucvn.co]
-match = -173.7%%
-title = Ông Trump nói ông đã có 'cuộc gọi rất tốt' với Tổng thống ...
-url = https://trithucvn.co/the-gioi/ong-trump-noi-ong-da-co-cuoc-goi-rat-tot-voi-tong-thong-ukraine-zelensky.html
+match = -68.4%%
+title = Sinh viên, máy tính, điện thoại và internet
+url = https://trithucvn.co/van-hoa/sinh-vien-may-tinh-dien-thoai-va-internet.html
 
 [bptv.vn]
 match = -57.9%%
