--- a/images/chieu-cay-moc-hoa14/config.ini
+++ b/images/chieu-cay-moc-hoa14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa14.html
 lastopen = 2024-06-09 23:35:14
 
 [search]
-lastsearch = 2024-07-21 10:44:12
+lastsearch = 2024-07-21 12:36:46
 
 [www.youtube.com]
-match = -126.3%%
-title = Cây hoa mộc,cây hoa mộc hương ra hoa nhiều,những căn ...
-url = https://www.youtube.com/watch?v=KAnEyj4H3PY
+match = -121.1%%
+title = Cây hoa mộc hương sau 2 tháng tạo tán cây đã rất đẹp
+url = https://www.youtube.com/watch?v=Z5dWoPtuKqA
 
 [trangtrisanvuon.vn]
 match = -147.4%%
