--- a/images/ga-phu-es1807-180x200/config.ini
+++ b/images/ga-phu-es1807-180x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/ga-phu-es1807-180x200.html
 lastopen = 2024-06-07 01:02:20
 
 [search]
-lastsearch = 2024-07-21 09:48:59
+lastsearch = 2024-07-21 12:38:47
 
 [everonvn.com.vn]
-match = 4.8%%
-title = Bộ Everon Es1804 - Esmeranda
-url = https://everonvn.com.vn/everon/606/bo-everon-es1804
+match = -61.9%%
+title = Bảng giá bán lẻ Ga chun Everon Ep1834 - Rose
+url = https://everonvn.com.vn/everon/704/ga-chun-everon-ep1834-rose
 
 [everonhanoi.vn]
 match = -23.8%%
-title = Bộ EP1721 - Chăn ga gối Everon
-url = https://everonhanoi.vn/san-pham/bo-ep1721/
+title = Bộ EP1734 - Chăn ga gối Everon
+url = https://everonhanoi.vn/san-pham/bo-ep1734/
 
 [www.diepxuan.com]
 match = 100.0%%
