--- a/images/nem-caosu-dreamland-uc-160x200x10-xuat-khau/config.ini
+++ b/images/nem-caosu-dreamland-uc-160x200x10-xuat-khau/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-dreamland-uc-160x200x10-xuat-khau.html
 lastopen = 2024-06-07 00:26:46
 
 [search]
-lastsearch = 2024-07-21 11:22:01
+lastsearch = 2024-07-21 12:38:24
 
 [demdreamland.vn]
 match = 25.6%%
@@ -12,9 +12,9 @@ title = Đệm cao su nhập khẩu Dreamland Natural Latex
 url = https://demdreamland.vn/dem-cao-su-nhap-khau-dreamland-natural-latex/
 
 [demxanh.com]
-match = 16.3%%
-title = Đệm cao su Kim Cương xuất khẩu PRINCESS MASSAGE ...
-url = https://demxanh.com/dem-cao-su-kim-cuong-xuat-khau-princess-massage.html
+match = 18.6%%
+title = Đệm cao su Kim Cương xuất khẩu PRINCESS GOLD áo gấm
+url = https://demxanh.com/dem-cao-su-kim-cuong-xuat-khau-princess-gold.html
 
 [www.diepxuan.com]
 match = -277.8%%
