--- a/images/nem-pyeoda-thuong-18/config.ini
+++ b/images/nem-pyeoda-thuong-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-18.html
 lastopen = 2024-06-18 17:45:17
 
 [search]
-lastsearch = 2024-07-21 11:17:50
+lastsearch = 2024-07-21 12:31:05
 
 [www.facebook.com]
 match = -45.0%%
@@ -17,9 +17,9 @@ title = Chăn ga gối Singapore Pyeoda LCHARME gấm 7 món PL18
 url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-lcharme-gam-7-mon-pl18.html
 
 [www.khodemthanhdo.com]
-match = -8.3%%
-title = ĐỆM THÀNH ĐÔ
-url = https://www.khodemthanhdo.com/
+match = 5.0%%
+title = Bộ chăn ga gối pyeoda
+url = https://www.khodemthanhdo.com/collections/bo-chan-ga-goi-phu-pyeoda
 
 [pyeoda.vn]
 match = -95.0%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Trang Chủ
 url = https://diepxuan.com/
 
 [demsingapore.com]
-match = -75.0%%
-title = Bộ chăn ga gối Singapore Gold 5 gối Pyeoda 14
-url = https://demsingapore.com/bo-chan-ga-goi-singapore-5-goi-gold-pyeoda-14.html
+match = -80.0%%
+title = Bộ chăn ga gối Singapore Gold 5 gối Pyeoda 24
+url = https://demsingapore.com/bo-chan-ga-goi-singapore-5-goi-gold-pyeoda-24.html
 
 [vuanem.com]
 match = -15.0%%
