--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-21 09:52:28
+lastsearch = 2024-07-21 12:30:22
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -17,8 +17,8 @@ title = 김가일 | Ga Kim - Coreano 🇰🇷 Fácil e Rápido (@gakim0)
 url = https://www.instagram.com/gakim0/?hl=en
 
 [www.reddit.com]
-match = -50.0%%
-title = Riot is cutting back budget on esports?
+match = -135.0%%
+title = Riot is cutting back budget on esports? : r/leagueoflegends
 url = https://www.reddit.com/r/leagueoflegends/comments/9aqbes/riot_is_cutting_back_budget_on_esports/
 
 [en.wikipedia.org]
@@ -27,9 +27,9 @@ title = Nam Joo-hyuk
 url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
 
 [www.facebook.com]
-match = -160.0%%
-title = CDT Jake Sorrels successfully defended his senior thesis “ ...
-url = https://www.facebook.com/photo.php?fbid=2759708960745737&id=130999010283425&set=a.135510956498897&locale=hu_HU
+match = -140.0%%
+title = Korean Embassy in South Africa 주남아공한국대사관
+url = https://www.facebook.com/KoreanEmbassySouthAfrica/
 
 [www.vietnam.vn]
 match = -155.0%%
