CI images update

--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-21 11:21:52
+lastsearch = 2024-07-21 13:20:55
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -17,9 +17,9 @@ title = Chiếu lác thiên nhiên : 1m6 .1m8
 url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
 
 [www.youtube.com]
-match = -106.2%%
-title = EM TÌNH CHÀO CẢ NHÀ 0383456504 TRƯA 20/7
-url = https://www.youtube.com/watch?v=E0QTdYhqmrU
+match = -150.0%%
+title = TÌNH CỜ TÌM ĐƯỢC NGƯỜI THÂN VÔ GIA CƯ Ở MỸ QUA ...
+url = https://www.youtube.com/watch?v=6598XYpaW3E
 
 [hawater.com.vn]
 match = -75.0%%
@@ -152,9 +152,9 @@ title = lịch thi đấu sea games 32 ngày 16 tháng 05
 url = https://caodangtkv.edu.vn/Xsn/20240615-77kfuhesoi kèo tài xỉu việt nam malaysia.html
 
 [www.facebook.com]
-match = -22.2%%
-title = Nhược Lạc
-url = https://www.facebook.com/nhuoclac.writing/
+match = 7.1%%
+title = Cuối Giờ Chiều
+url = https://www.facebook.com/cuoigiochieu/
 
 [suckhoedoisong.vn]
 match = -225.0%%
@@ -352,9 +352,9 @@ title = Bàn đạp phanh ô tô rung lắc phải làm sao?
 url = http://baoyenbai.com.vn/227/325068/Ban-dap-phanh-o-to-rung-lac-phai-lam-sao.aspx
 
 [atgt.baogiaothong.vn]
-match = -268.8%%
-title = Đóng đường qua vị trí sụt lún trên QL16, phương tiện đi lại thế ...
-url = https://atgt.baogiaothong.vn/dong-duong-qua-vi-tri-sut-lun-tren-ql16-phuong-tien-di-lai-the-nao-192240716215333313.htm
+match = -212.5%%
+title = Cano du lịch chìm trên vùng biển Cù Lao Chàm do va phải đá ...
+url = https://atgt.baogiaothong.vn/cano-du-lich-chim-tren-vung-bien-cu-lao-cham-do-va-phai-da-ngam-192240721104942646.htm
 
 [cafebiz.vn]
 match = -218.8%%
@@ -457,9 +457,9 @@ title = MBS tung gói ưu đãi "khủng" cho nhà đầu tư trẻ
 url = https://vietstock.vn/2024/07/mbs-tung-goi-uu-dai-khung-cho-nha-dau-tu-tre-830-1206774.htm
 
 [nld.com.vn]
-match = -218.8%%
-title = Sau vụ ông Trump bị mưu sát, Tổng thống Biden đảo chiều ...
-url = https://nld.com.vn/podcast/sau-khi-ong-trump-bi-muu-sat-tong-thong-biden-dao-chieu-chien-luoc-196240715112408812.htm
+match = -87.5%%
+title = Dự báo hướng di chuyển của cơn bão số 2
+url = https://nld.com.vn/podcast/du-bao-huong-di-chuyen-cua-con-bao-so-2-196240721112923455.htm
 
 [baophapluat.vn]
 match = -206.2%%
@@ -550,4 +550,19 @@ url = https://langsontv.vn/news/488/72906/nadal-tien-vao-ban-ket-nordea-open-sau
 match = -168.8%%
 title = Bàn giao cá thể trăn gấm 22kg cho lực lượng kiểm lâm
 url = https://nongnghiep.vn/ban-giao-ca-the-tran-gam-22kg-cho-luc-luong-kiem-lam-d393565.html
+
+[baotainguyenmoitruong.vn]
+match = -156.2%%
+title = Động đất 4.1 độ tại huyện Ngọc Lặc, tỉnh Thanh Hóa
+url = https://baotainguyenmoitruong.vn/dong-dat-4-1-do-tai-huyen-ngoc-lac-tinh-thanh-hoa-377000.html
+
+[congan.binhphuoc.gov.vn]
+match = -200.0%%
+title = Khắc ghi những lời dạy của Tổng Bí thư Nguyễn Phú Trọng ...
+url = https://congan.binhphuoc.gov.vn/tin-bo-cong-an/khac-ghi-nhung-loi-day-cua-tong-bi-thu-nguyen-phu-trong-trong-cong-tac-xay-dung-luc-luong-cand-331094
+
+[giaoducthoidai.vn]
+match = -156.2%%
+title = Barcelona chi tiền 'khủng' chiêu mộ Nico Williams
+url = https://giaoducthoidai.vn/barcelona-chi-tien-khung-chieu-mo-nico-williams-post692553.html
 
