--- a/images/chieu-cay-moc-hoa14/config.ini
+++ b/images/chieu-cay-moc-hoa14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa14.html
 lastopen = 2024-06-09 23:35:14
 
 [search]
-lastsearch = 2024-07-21 12:36:46
+lastsearch = 2024-07-21 13:18:05
 
 [www.youtube.com]
-match = -121.1%%
-title = Cây hoa mộc hương sau 2 tháng tạo tán cây đã rất đẹp
-url = https://www.youtube.com/watch?v=Z5dWoPtuKqA
+match = -163.2%%
+title = Mộc Hương ta hoa vàng còn đáng chơi khi giá trị nó không ...
+url = https://www.youtube.com/watch?v=kOeDP1xRFpk
 
 [trangtrisanvuon.vn]
 match = -147.4%%
