--- a/images/vo-chan-ks-uc-20-22/config.ini
+++ b/images/vo-chan-ks-uc-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-22.html
 lastopen = 2024-06-09 22:13:27
 
 [search]
-lastsearch = 2024-07-21 03:34:07
+lastsearch = 2024-07-21 13:21:38
 
 [profiles.icts.uci.edu]
 match = -7.1%%
@@ -17,9 +17,9 @@ title = Identification of 12 new susceptibility loci for different ...
 url = https://pubmed.ncbi.nlm.nih.gov/28346442/
 
 [www.dir.ca.gov]
-match = -21.1%%
-title = ADDITIONAL CASE INFORMATION
-url = https://www.dir.ca.gov/dwc/sb1160-ab1244/Consolidation-Notice-First-Hearing/Garcia-Additional-Cases-Info.pdf
+match = -126.3%%
+title = Workers' Compensation Appeals Board - Panel decisions
+url = https://www.dir.ca.gov/wcab/wcab-Decisions.htm
 
 [profiles.ucsf.edu]
 match = 10.5%%
@@ -27,9 +27,9 @@ title = Courtney Lyles, PhD
 url = https://profiles.ucsf.edu/courtney.lyles
 
 [www.ncbi.nlm.nih.gov]
-match = -131.6%%
-title = Physical fitness training for stroke patients - PMC
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6464717/
+match = -168.4%%
+title = Review of influenza-associated pulmonary aspergillosis in ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7306567/
 
 [www.lebow.drexel.edu]
 match = -126.3%%
@@ -37,9 +37,9 @@ title = Shawkat Hammoudeh, PhD - LeBow College of Business
 url = https://www.lebow.drexel.edu/people/shawkathammoudeh
 
 [profiles.ucsd.edu]
-match = -10.5%%
-title = Gary Vilke - UCSD Profiles
-url = https://profiles.ucsd.edu/gary.vilke
+match = -41.7%%
+title = Tommi Gaines
+url = https://profiles.ucsd.edu/tommi.gaines
 
 [medboard.nv.gov]
 match = -100.0%%
