CI images update

--- a/images/chan-5-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-5-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-10 00:08:59
 
 [search]
-lastsearch = 2024-07-21 12:38:13
+lastsearch = 2024-07-21 13:39:08
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -235,4 +235,9 @@ url = https://vnexpress.net/sam-smith-ke-hau-qua-cua-tai-nan-truot-tuyet-4772402
 match = -48.1%%
 title = Thủ tướng Thái Lan và kiều bào tại Thái Lan chia buồn ...
 url = https://baoquangninh.vn/thu-tuong-thai-lan-va-kieu-bao-tai-thai-lan-chia-buon-truoc-su-ra-di-cua-tong-bi-thu-nguyen-phu-tron-3309824.html
+
+[selinahouse.com]
+match = -44.4%%
+title = Phân biệt chăn lông thỏ Thái Lan xịn và chăn Trung Quốc
+url = https://selinahouse.com/goc-tu-van-chan-long-tho/phan-biet-chan-long-tho-thai-lan-xin-va-chan-trung-quoc/
 
