--- a/images/chieu-cay-ht-14/config.ini
+++ b/images/chieu-cay-ht-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-ht-14.html
 lastopen = 2024-06-09 21:54:46
 
 [search]
-lastsearch = 2024-07-21 12:44:15
+lastsearch = 2024-07-21 13:42:07
 
 [www.diepxuan.com]
-match = -6.7%%
-title = Điệp Xuân Chiếu cây HT 160x200
-url = https://www.diepxuan.com/chieu-cay-ht-160x200.html
+match = 7.1%%
+title = HT - Điệp Xuân
+url = https://www.diepxuan.com/ht.html
 
 [shopee.vn]
 match = -6.7%%
@@ -22,9 +22,9 @@ title = Lịch phát sóng - Đài Truyền hình TP. ...
 url = https://www.htv.com.vn/lich-phat-song
 
 [www.thietbidiendgp.vn]
-match = -106.7%%
-title = Đèn Led mắt ếch HT 8091 14W HT MAX LIGHT
-url = https://www.thietbidiendgp.vn/products/me91-14-t-v-tt-ht-light-level
+match = -146.7%%
+title = Đèn Led mắt ếch 8091 viền đen 14W HT MAX LIGHT
+url = https://www.thietbidiendgp.vn/products/mevd912-14-t-v-tt-ht-light-level
 
 [www.facebook.com]
 match = -180.0%%
