--- a/images/nem-caosu-dreamland-uc-160x200x10-xuat-khau/config.ini
+++ b/images/nem-caosu-dreamland-uc-160x200x10-xuat-khau/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-dreamland-uc-160x200x10-xuat-khau.html
 lastopen = 2024-06-07 00:26:46
 
 [search]
-lastsearch = 2024-07-21 12:38:24
+lastsearch = 2024-07-21 13:35:43
 
 [demdreamland.vn]
 match = 25.6%%
@@ -12,9 +12,9 @@ title = Đệm cao su nhập khẩu Dreamland Natural Latex
 url = https://demdreamland.vn/dem-cao-su-nhap-khau-dreamland-natural-latex/
 
 [demxanh.com]
-match = 18.6%%
-title = Đệm cao su Kim Cương xuất khẩu PRINCESS GOLD áo gấm
-url = https://demxanh.com/dem-cao-su-kim-cuong-xuat-khau-princess-gold.html
+match = 16.3%%
+title = Đệm cao su Kim Cương xuất khẩu PRINCESS MASSAGE ...
+url = https://demxanh.com/dem-cao-su-kim-cuong-xuat-khau-princess-massage.html
 
 [www.diepxuan.com]
 match = -277.8%%
@@ -65,4 +65,9 @@ url = https://changagoidemsonghong.online/cap-nhat-bang-gia-dem-dreamland-moi-nh
 match = 0.0%%
 title = Đệm lò xo xuất khẩu - Chăn ga gối đệm cao cấp Dreamland
 url = http://www.dreamland.vn/Dem-lo-xo-xuat-khau-i4157.html
+
+[www.facebook.com]
+match = -30.0%%
+title = Đệm cao su Dreamland
+url = https://www.facebook.com/photo.php?fbid=2248145408633147&id=273516616096046&set=a.298231103624597
 
