--- a/images/vo-goi-epm20065-45x65/config.ini
+++ b/images/vo-goi-epm20065-45x65/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-epm20065-45x65.html
 lastopen = 2024-07-07 18:08:23
 
 [search]
-lastsearch = 2024-07-21 12:19:48
+lastsearch = 2024-07-21 13:36:57
 
 [www.diepxuan.com]
 match = -19.0%%
@@ -22,9 +22,9 @@ title = Giảm giá Vỏ gối 45x65 EVERON chính hãng thêu dây leo ...
 url = https://muathongminh.vn/vo-goi-everon-45-x-65-cm-ko-kem-ruot-p.1__3862161698__114265811
 
 [www.everonqb.com]
-match = -47.6%%
-title = Everon Quảng Bình Vỏ gối ôm ESB23022 80x100
-url = https://www.everonqb.com/vo-goi-om-esb23022-80x100.html
+match = -42.9%%
+title = Vỏ gối EPM20065 45x65 - Everon Quảng Bình Trang Chủ
+url = https://www.everonqb.com/vo-goi-epm20065-45x65.html
 
 [mho.vn]
 match = -9.5%%
