--- a/images/bo-ga-goi-chun-coco-18/config.ini
+++ b/images/bo-ga-goi-chun-coco-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 lastopen = 2024-06-09 23:53:28
 
 [search]
-lastsearch = 2024-07-21 14:12:48
+lastsearch = 2024-07-21 15:16:28
 
 [www.diepxuan.com]
 match = -27.3%%
@@ -12,14 +12,14 @@ title = Bộ ga gối chun coco 18 - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 
 [shopee.vn]
-match = -68.2%%
-title = Bộ Ga Gối Nỉ Nhung COCO in Nổi Hoạ Tiết Mẫu Mới 2023 ...
-url = https://shopee.vn/Bộ-Ga-Gối-Nỉ-Nhung-COCO-in-Nổi-Hoạ-Tiết-Mẫu-Mới-2023-Chất-Liệu-Dày-Dặn-Mềm-Mịn-Ấm-Áp-Cao-Cấp-Giữ-Nhiệt-Tốt-i.29708084.23159379927
+match = -59.1%%
+title = Bộ ga gối nỉ nhung COCO nhập khẩu cao cấp, ga trải ...
+url = https://shopee.vn/Bộ-ga-gối-nỉ-nhung-COCO-nhập-khẩu-cao-cấp-ga-trải-giường-3-món-ga-chun-bọc-đệm-bền-màu-không-bai-dão-KT-1m6-1m8-2m2-i.224201185.14136884439
 
 [m.facebook.com]
-match = -18.2%%
-title = COCO Decor - Chăn Ga Gối | Nam Định
-url = https://m.facebook.com/cocodecorchangagoidem/
+match = -81.8%%
+title = Chiếu điều hoà (chiếu mây), chiếu tre, chăn-ga-gối
+url = https://m.facebook.com/groups/151776543537474/posts/778191197562669/
 
 [hanvico.com.vn]
 match = 31.8%%
@@ -47,9 +47,9 @@ title = Bộ Ga Gối Chun Siêu Sang, Giá Khuyến Mãi, Tiết Kiệm Tối .
 url = https://www.sendo.vn/bo-ga-goi-chun.htm
 
 [demxanh.com]
-match = -27.3%%
-title = Chiếu cao su non Coco bo chun màu hồng
-url = https://demxanh.com/chieu-cao-su-non-coco-bo-chun-mau-hong.html
+match = -40.9%%
+title = Chiếu cao su non Coco bo chun màu xám nhạt
+url = https://demxanh.com/chieu-cao-su-non-coco-bo-chun-mau-xam-nhat.html
 
 [www.tiktok.com]
 match = -127.3%%
