--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-21 14:27:51
+lastsearch = 2024-07-21 15:15:22
 
 [en.wikipedia.org]
 match = -45.5%%
@@ -17,9 +17,9 @@ title = Yechan (xikers) - Kpop Wiki - Fandom
 url = https://kpop.fandom.com/wiki/Yechan_(xikers)
 
 [kprofiles.com]
-match = -76.5%%
-title = xikers Members Profile (Updated!)
-url = https://kprofiles.com/xikers-members-profile/
+match = -200.0%%
+title = KQ FELLAZ (KQ Entertainment Official Trainees) (Updated!)
+url = https://kprofiles.com/kq-fellaz-kq-entertainment-official-trainees/
 
 [www.qsc.com]
 match = -188.2%%
@@ -32,9 +32,9 @@ title = Mechanosensitive Channel PIEZO1 Senses Shear Force to ...
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9317998/
 
 [books.google.com]
-match = -200.0%%
-title = Reactive Oxygen Species in Chemistry, Biology, and Medicine
-url = https://books.google.com/books?id=p5LkBwAAQBAJ&pg=PA123&lpg=PA123&dq=chan+5+kg+kq+song&source=bl&ots=XG0t8t37If&sig=ACfU3U1SnCVZCHlBQl6Pths4OicYwkwCbA&hl=en&sa=X&ved=2ahUKEwiUsP3tzbeHAxUAq4kEHeNnAswQ6AF6BAgWEAM
+match = -11.8%%
+title = Cumulated Index Medicus
+url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWVIL3t-b&sig=ACfU3U0kZTzoUqx-snDGWMGqX5KcD4OTYQ&hl=en&sa=X&ved=2ahUKEwiKk6-92LeHAxU-MDQIHd5aBowQ6AF6BAgbEAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
