--- a/images/chieu-dieu-hoa-cao-su-180x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-180x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-180x200.html
 lastopen = 2024-07-01 06:28:11
 
 [search]
-lastsearch = 2024-07-21 12:49:10
+lastsearch = 2024-07-21 15:17:13
 
 [demxanh.com]
-match = 27.6%%
-title = Chiếu điều hòa cao su non Tencel vàng chanh
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-vang-chanh.html
+match = 34.5%%
+title = Chiếu điều hòa cao su non Modern viền lụa
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-modern-vien-lua.html
 
 [leflair.com]
 match = 6.9%%
 title = Bộ Chiếu Cao Su Điều Hòa Mix 180x200 (3 Món)...
-url = https://leflair.com/en/shop/bo-chieu-cao-su-ieu-hoa-mix-180x200-3-mon-16379
+url = https://leflair.com/shop/bo-chieu-cao-su-ieu-hoa-mix-180x200-3-mon-16379
 
 [www.lazada.vn]
 match = -17.2%%
