--- a/images/chieu-lac-soc-14/config.ini
+++ b/images/chieu-lac-soc-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-14.html
 lastopen = 2024-06-09 23:48:09
 
 [search]
-lastsearch = 2024-07-21 14:27:40
+lastsearch = 2024-07-21 15:14:41
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -302,9 +302,9 @@ title = Bị Nghiêp đòng Dâm Hiếp - Chồng bất lực nhìn vợ bị
 url = https://jebbia.it/1309260-bị-hiếp-nghiêp-đòng-dâm.html
 
 [www.momo.vn]
-match = -37.5%%
-title = Lịch chiếu phim CGV Aeon Hà Đông
-url = https://www.momo.vn/cinema/rap/cgv/cgv-aeon-ha-dong-128
+match = -68.8%%
+title = Lịch chiếu phim CGV Bình Dương Square
+url = https://www.momo.vn/cinema/rap/cgv/cgv-binh-duong-square-15
 
 [hico.vn]
 match = -168.8%%
