CI images update

--- a/images/chieu-lac-d2-15/config.ini
+++ b/images/chieu-lac-d2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-15.html
 lastopen = 2024-06-21 06:43:45
 
 [search]
-lastsearch = 2024-07-21 15:18:04
+lastsearch = 2024-07-21 15:32:25
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -217,9 +217,9 @@ title = Danh sách những tên đường thuộc Quận Bình Thạnh
 url = http://displaysolution.vn/tin-tuc/danh-sach-nhung-ten-duong-thuoc-quan-binh-thanh-41017.html
 
 [thuvienvatly.com]
-match = -20.0%%
-title = Con lắc lò xo + sóng cơ
-url = https://thuvienvatly.com/forums/index.php?topic=8218.0;wap2
+match = -73.3%%
+title = Hai bài dao động cơ cần giải đáp
+url = https://thuvienvatly.com/forums/index.php?topic=16800
 
 [www.victoriavn.com]
 match = -6.7%%
