--- a/images/bo-ga-goi-chun-chan-happy-16/config.ini
+++ b/images/bo-ga-goi-chun-chan-happy-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-chan-happy-16.html
 lastopen = 2024-06-06 16:51:08
 
 [search]
-lastsearch = 2024-07-21 13:39:30
+lastsearch = 2024-07-21 15:31:33
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -18,13 +18,13 @@ url = https://www.facebook.com/changahappinessvn/
 
 [shopee.vn]
 match = -21.4%%
-title = bộ ga chun poly giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=bộ ga chun poly
+title = bộ vỏ chăn ga gối giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=bộ vỏ chăn ga gối
 
 [chandem.com.vn]
-match = 17.9%%
-title = Bộ chăn ga gối Happy Wedding Solid 84
-url = https://chandem.com.vn/san-pham/bo-chan-ga-goi-solid-84/
+match = 21.4%%
+title = Bộ chăn ga gối Litter Girl Ctt112
+url = https://chandem.com.vn/san-pham/bo-chan-ga-goi-ctt112/
 
 [demxanh.com]
 match = 14.3%%
