--- a/images/chan-hoi-re-chan-phao/config.ini
+++ b/images/chan-hoi-re-chan-phao/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-re-chan-phao.html
 lastopen = 2024-06-09 22:50:47
 
 [search]
-lastsearch = 2024-07-21 13:48:16
+lastsearch = 2024-07-21 15:30:07
 
 [www.dem365.vn]
-match = -81.0%%
-title = Chăn Phao Siêu Nhẹ Mẫu Mã Đa Dạng - Chăn Ga Gối Đệm 365
-url = https://www.dem365.vn/chan/chan-phao-mau-ma-da-dang-de-lua-chon/
+match = -61.9%%
+title = Chăn Giá Rẻ Chăn Phao Siêu Nhẹ - Chăn Ga Gối Đệm 365
+url = https://www.dem365.vn/chan-gia-re-chan-phao-sieu-nhe/
 
 [www.demgiare.net]
 match = -4.8%%
@@ -37,9 +37,9 @@ title = Câu cá, ưu và nhược điểm của dùng hạt chặn và dùng ch
 url = https://www.youtube.com/watch?v=47iqz2ImKhc
 
 [www.lazada.vn]
-match = -33.3%%
-title = Chăn Phao Siêu Nhẹ Mùa đông Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/chan-phao-sieu-nhe-mua-dong/
+match = -76.2%%
+title = Chăn Mền Phao Giá Tốt T06/2024 | Mua tại Lazada.vn
+url = https://www.lazada.vn/tag/chan-men-phao/
 
 [docauquanghuy.com]
 match = -33.3%%
