--- a/images/chieu-dieu-hoa-khong-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-15.html
 lastopen = 2024-06-09 23:41:33
 
 [search]
-lastsearch = 2024-07-21 13:40:04
+lastsearch = 2024-07-21 15:34:59
 
 [demxanh.com]
-match = 14.8%%
-title = Sử dụng chiếu điều hòa có tốt hay không?
-url = https://demxanh.com/su-dung-chieu-dieu-hoa-co-tot-hay-khong.html
+match = 25.9%%
+title = Chiếu điều hòa Nhật Bản NEKIO chính hãng
+url = https://demxanh.com/chieu-dieu-hoa-nhat-ban-nekio-chinh-hang-nhat.html
 
 [goni.vn]
 match = 14.8%%
@@ -17,9 +17,9 @@ title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 07/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [shopee.vn]
-match = 0.0%%
-title = Chiếu Điều Hoà Sợi Mây Tơ Tằm Mát Lạnh Không Gối ...
-url = https://shopee.vn/Chiếu-Điều-Hoà-Sợi-Mây-Tơ-Tằm-Mát-Lạnh-Không-Gối-Cao-Cấp-Chiếu-Có-Chun-Cài-Góc-Hàng-Loại-1-i.529742790.25073007553
+match = -29.6%%
+title = Chiếu Điều Hòa Lụa Dày các cỡ 1.2m - 1.5m - 1.6m - 1.8m
+url = https://shopee.vn/Chiếu-Điều-Hòa-Lụa-Dày-các-cỡ-1.2m-1.5m-1.6m-1.8m-2m-i.331106991.12046528350
 
 [foreverbedding.net]
 match = -59.3%%
