--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-21 11:36:04
+lastsearch = 2024-07-21 15:38:17
 
 [scholar.google.com]
 match = -43.8%%
@@ -119,7 +119,7 @@ url = https://www.youtube.com/watch?v=hteDrQdI8UA
 [books.google.com]
 match = -162.5%%
 title = Annuaire général de l'Indochine. Partie commerciale
-url = https://books.google.com/books?id=RbcVAQAAIAAJ&pg=PA828&lpg=PA828&dq=chieu+lac+soc+18&source=bl&ots=6MkLDCc5TM&sig=ACfU3U0DqD2abhAsflgswUOasaUwupeWgw&hl=en&sa=X&ved=2ahUKEwjR-pS7p7eHAxW9D1kFHe0FBDkQ6AF6BAghEAM
+url = https://books.google.com/books?id=RbcVAQAAIAAJ&pg=PA828&lpg=PA828&dq=chieu+lac+soc+18&source=bl&ots=6MkLDE70WP&sig=ACfU3U0L6imIyN5SakFzLR-vDSEKAIAi6A&hl=en&sa=X&ved=2ahUKEwjm0PTM3beHAxVQC3kGHQH0C_8Q6AF6BAgiEAM
 
 [tuanhiep.com.vn]
 match = -56.2%%
