--- a/images/chieu-truc-den-khong-vien-18/config.ini
+++ b/images/chieu-truc-den-khong-vien-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-18.html
 lastopen = 2024-06-07 00:19:24
 
 [search]
-lastsearch = 2024-07-21 12:38:01
+lastsearch = 2024-07-21 15:36:39
 
 [chieutrelanlan.com]
 match = 0.0%%
@@ -92,9 +92,9 @@ title = Tìm hiểu về quy trình để tạo nên sản phẩm chiếu trúc 
 url = https://chieutrucxinh.weebly.com/chia-se/category/mua-chi7871u-truacutec
 
 [h5.lazada.vn]
-match = -21.4%%
-title = chiếu tre 1,4*1,9m hạt vàng không viền hàng Việt Nam ...
-url = https://h5.lazada.vn/products/chieu-truc-chieu-tre-1419m-hat-vang-khong-vien-hang-viet-nam-sieu-re-i277132020.html
+match = 42.9%%
+title = Chiếu trúc 1,6*2m hạt nâu không viền
+url = https://h5.lazada.vn/products/chieu-truc-162m-hat-nau-khong-vien-i473062569.html
 
 [chieutrucchieutre.ete.vn]
 match = 32.1%%
@@ -127,7 +127,12 @@ title = 02/0//cAT-QLXNC V/v trien khai Lulat so 23 va cac van ban quy ...
 url = https://mttq.travinh.gov.vn/SiteFolders/ubmttq/2023/12.2023/2802.signed.pdf
 
 [www.facebook.com]
-match = 28.6%%
-title = Chiếu Tre Lan Lan | Ho Chi Minh City
-url = https://www.facebook.com/chieutruclanlan/
+match = -15.8%%
+title = Thế Giới Chiếu Trúc
+url = https://www.facebook.com/thegioichieutruc/
+
+[suongtuyet.com]
+match = 50.0%%
+title = Chiếu Trúc Việt Nam - Đà Nẵng
+url = https://suongtuyet.com/chieu-truc-bong-hong
 
