--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-07-21 11:14:59
+lastsearch = 2024-07-21 15:35:10
 
 [www.lazada.vn]
 match = -61.1%%
@@ -12,14 +12,14 @@ title = Orangesky Cần Câu Cá Biển Yuantou ...
 url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
-match = -33.3%%
-title = Nem Nướng
-url = https://www.facebook.com/p/Nem-Nướng-100054522756775/
+match = -122.2%%
+title = Nem Nướng, Nem Chua Thanh Hóa - giá siêu mềm chỉ 30k
+url = https://www.facebook.com/groups/7408819529141100/posts/-nem-nướng-nem-chua-thanh-hóa-giá-siêu-mềm-chỉ-30k-đừng-để-vị-giác-của-bạn-phải-/8212919362064442/
 
 [thegioinem.com]
-match = -105.6%%
-title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
-url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
+match = -116.7%%
+title = Top 5 nệm mỏng gấp gọn bán chạy nhất Thế Giới Nệm
+url = https://thegioinem.com/top-5-nem-mong-gap-gon-ban-chay-nhat-the-gioi-nem.html
 
 [garan.vn]
 match = -166.7%%
@@ -37,9 +37,9 @@ title = Tipps and Tricks - How to make CHA GIO - Authentic ...
 url = https://www.youtube.com/watch?v=YdTLFfXiGMk
 
 [www.instagram.com]
-match = -138.9%%
-title = Ăn-bởi-Long | [NEM NƯỚNG, CÁ BÒ, PHÔ MAI QUE CHỊ ...
-url = https://www.instagram.com/p/Bb9uTnaBRoV/?hl=en
+match = -72.2%%
+title = Mon_ngonnn | 🔥🍻 𝐍𝐄𝐌 𝐂𝐇𝐔𝐀 𝐓𝐇𝐀𝐍𝐇 𝐇𝐎́𝐀 𝐆𝐈𝐀 ...
+url = https://www.instagram.com/p/C9MZ-e5Tnhr/
 
 [vietnamnet.vn]
 match = -144.4%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Nệm siêu nhẹ
 url = https://www.diepxuan.com/nem-sieu-nhe.html
 
 [m.facebook.com]
-match = -11.1%%
-title = NEM Fashion added a new photo.
-url = https://m.facebook.com/photo/?fbid=780012377494795&set=pcb.780016060827760
+match = -116.7%%
+title = NEM Fashion - NEM Fashion updated their cover photo.
+url = https://m.facebook.com/photo/?fbid=815333730629326&set=a.651941763635191
 
 [emartmall.com.vn]
 match = 0.0%%
