CI images update

--- a/images/chieu-gap-dai-loan-18/config.ini
+++ b/images/chieu-gap-dai-loan-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-18.html
 lastopen = 2024-06-09 22:42:55
 
 [search]
-lastsearch = 2024-07-21 15:45:53
+lastsearch = 2024-07-21 16:29:20
 
 [tiki.vn]
 match = -47.6%%
@@ -12,9 +12,9 @@ title = Chiếu trúc đài loan hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chiếu trúc đài loan
 
 [www.facebook.com]
-match = 28.6%%
-title = Xin chào, tôi ở Đài Loan
-url = https://www.facebook.com/toiodailoan/?locale=vi_VN
+match = 5.9%%
+title = Rạp Chiếu Phim Cũ
+url = https://www.facebook.com/phimhaygiare/
 
 [www.roc-taiwan.org]
 match = -19.0%%
@@ -37,9 +37,9 @@ title = Thang nhôm chữ M TW Đài Loan Pal B6-205
 url = https://www.thegioithangnhom.com/thang-nhom-dai-loan-pal-b6-205_7887.html
 
 [vi.wikipedia.org]
-match = -14.3%%
-title = Đài Loan – Wikipedia tiếng Việt
-url = https://vi.wikipedia.org/wiki/Đài_Loan
+match = 33.3%%
+title = Địa lý Đài Loan
+url = https://vi.wikipedia.org/wiki/Địa_lý_Đài_Loan
 
 [m.facebook.com]
 match = -90.5%%
@@ -67,9 +67,9 @@ title = Hứa Quang Hán 'ghi điểm' trong phim Đài Loan có doanh ...
 url = https://thanhnien.vn/hua-quang-han-ghi-diem-trong-phim-dai-loan-co-doanh-thu-chieu-som-cao-nhat-1852404081738149.htm
 
 [www.youtube.com]
-match = -128.6%%
-title = Lồng Tiếng | CHỊU THUA TRƯỚC EM - Tập 01 | Trọn Bộ Phim ...
-url = https://www.youtube.com/watch?v=lLYRcG4ULzg
+match = -114.3%%
+title = (Thuyết Minh) NGƯỜI VỢ ĐỊNH MỆNH - Tập 1 | Phim Ngôn ...
+url = https://www.youtube.com/watch?v=JiTBL5S6-kA
 
 [zh.wikipedia.org]
 match = -9.5%%
@@ -250,4 +250,14 @@ url = https://vietbao.com/a319583/hoa-ky-trung-quoc-va-dai-loan-va-vai-tro-cua-r
 match = -114.3%%
 title = Chủ tịch Tập tiếp cựu tổng thống Đài Loan: Không ai có thể ...
 url = https://www.voatiengviet.com/a/chu-tich-tap-tiep-cuu-tong-thong-dai-loan-khong-ai-co-the-ngan-duoc-doan-tu-gia-dinh-/7564385.html
+
+[sabomall.com]
+match = -133.3%%
+title = https://m.sabomall.com/sitemap/category/phukiencongnghe/3
+url = https://sabomall.com/sitemap/category/phukiencongnghe/3
+
+[vov.vn]
+match = -61.9%%
+title = Chiều nay, U19 Việt Nam gặp U19 Đài Loan (Trung Quốc)
+url = https://vov.vn/the-thao/bong-da/chieu-nay-u19-viet-nam-gap-u19-dai-loan-trung-quoc-283574.vov
 
