--- a/images/vo-goi-dreamland-50x70-tr/config.ini
+++ b/images/vo-goi-dreamland-50x70-tr/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-dreamland-50x70-tr.html
 lastopen = 2024-06-07 00:26:33
 
 [search]
-lastsearch = 2024-07-21 15:46:13
+lastsearch = 2024-07-21 16:32:15
 
 [furlife.vn]
 match = 70.8%%
-title = Vỏ Gối Dreamland - TR 18
-url = https://furlife.vn/vo-goi-dreamland-tr-18.p100015384455.html
+title = Vỏ Gối Dreamland - TR 23
+url = https://furlife.vn/vo-goi-dreamland-tr-23.p100020939170.html
 
 [www.furlife.vn]
 match = 70.8%%
@@ -114,7 +114,7 @@ url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://oknamarkt-no
 [www.instagram.com]
 match = -77.8%%
 title = Dreamland
-url = https://www.instagram.com/explore/locations/419248928887291/dreamland/?__d=1
+url = https://www.instagram.com/explore/locations/109169992552829/dreamland/?locale=dehttps:/555ten.com/?locale=dehttps://555ten.com/&hl=am-et
 
 [www.facebook.com]
 match = 8.0%%
