--- a/images/chieu-cay-ht-10/config.ini
+++ b/images/chieu-cay-ht-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-10.html
 lastopen = 2024-06-09 23:52:43
 
 [search]
-lastsearch = 2024-07-21 12:51:19
+lastsearch = 2024-07-21 16:29:40
 
 [chieutrucsaigon.com]
 match = 33.3%%
@@ -12,9 +12,9 @@ title = CHIẾU TRÚC TĂM H&T CÂY
 url = https://chieutrucsaigon.com/chieu-truc-tam/
 
 [shopee.vn]
-match = -6.7%%
-title = chiếu trúc tăm hương trúc ht
-url = https://shopee.vn/chiếu-trúc-tăm-hương-trúc-ht-i.68883759.14478905056
+match = -106.7%%
+title = chiếu tăm việt nam cao cấp kháng khuẩn H.T
+url = https://shopee.vn/chiếu-tăm-việt-nam-cao-cấp-kháng-khuẩn-H.T-i.68883759.1934498848
 
 [chieutruc.info]
 match = -126.7%%
@@ -22,14 +22,14 @@ title = Chiếu Tăm H&T - Chiếu Thanh Hương Trúc cao cấp
 url = https://chieutruc.info/chieu-tam-ht/
 
 [www.thietbidiendgp.vn]
-match = -6.7%%
-title = Đèn pha HT MAX LIGHT
-url = https://www.thietbidiendgp.vn/hang/htlight/den-chieu-sang/den-pha-htlight
+match = -13.3%%
+title = Đèn chiếu điểm HT MAX LIGHT
+url = https://www.thietbidiendgp.vn/hang/htlight/den-chieu-sang/den-chieu-diem-htlight
 
 [www.htlightlevel.vn]
-match = -193.3%%
-title = Đèn Rọi Cỏ - Công Ty Sản Xuất Đèn LED Chiếu Sáng HT ...
-url = https://www.htlightlevel.vn/den-roi-co-5w/
+match = -120.0%%
+title = Đèn Rọi Ray 8019 Tay Trắng - HT Max Light
+url = https://www.htlightlevel.vn/den-roi-ray-8019-10w-tay-trang/
 
 [www.dienotobinhdinh.com]
 match = 15.4%%
@@ -57,9 +57,9 @@ title = HT - Exoticzone
 url = https://hactexoticzone.com/
 
 [www.youtube.com]
-match = -166.7%%
-title = Một Chiều Thu ♪ THANH LAN Pre75 ♪ Sáng tác: TRẦN ...
-url = https://www.youtube.com/watch?v=ig_wsZpLUdc
+match = -200.0%%
+title = 23 người thoát chết sau vụ chìm cano ở Cù Lao Chàm ...
+url = https://www.youtube.com/watch?v=lgVCT7I3CpU
 
 [thaibinhseed.com.vn]
 match = -193.3%%
