--- a/images/chieu-cay-ht-14/config.ini
+++ b/images/chieu-cay-ht-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-ht-14.html
 lastopen = 2024-06-09 21:54:46
 
 [search]
-lastsearch = 2024-07-21 13:42:07
+lastsearch = 2024-07-21 16:31:54
 
 [www.diepxuan.com]
-match = 7.1%%
-title = HT - Điệp Xuân
-url = https://www.diepxuan.com/ht.html
+match = -6.7%%
+title = Điệp Xuân Chiếu cây HT 160x200
+url = https://www.diepxuan.com/chieu-cay-ht-160x200.html
 
 [shopee.vn]
 match = -6.7%%
