--- a/images/chieu-lac-d2-14/config.ini
+++ b/images/chieu-lac-d2-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-14.html
 lastopen = 2024-06-21 06:28:49
 
 [search]
-lastsearch = 2024-07-21 16:19:18
+lastsearch = 2024-07-21 16:31:43
 
 [www.diepxuan.com]
 match = 33.3%%
@@ -17,9 +17,9 @@ title = Sơ đồ sân bay Tân Sơn Nhất ga nội địa, quốc tế MỚI N
 url = https://vinpearl.com/vi/so-do-san-bay-tan-son-nhat
 
 [www.facebook.com]
-match = -126.7%%
-title = Ways Station Gaming - "Nghiêng nước ...
-url = https://www.facebook.com/waysstation/photos/a.179106562519975/1171642583266363/?type=3
+match = -253.3%%
+title = Black Kingdom - D2 - Milio E - Cái Ôm Ấm Áp: - Hồi chiêu ...
+url = https://www.facebook.com/photo.php?fbid=822787286517092&id=100063574839369&set=a.647966903999132&locale=mt_MT
 
 [phongthuykyhoa.com]
 match = -73.3%%
@@ -355,4 +355,9 @@ url = https://concung.com/tim-sieu-thi/d2-40b-doan-nguyen-tuan-ap-4-xa-hung-long
 match = -193.3%%
 title = Đèn âm trần Yeelight Mesh Downlight M2 Pro YLTS03YL
 url = https://smarthomekit.vn/san-pham/yeelight-m2-pro/
+
+[xoilaczvi.tv]
+match = -206.7%%
+title = Xoilac TV - Xem Trực Tiếp Bóng Đá Xôi Lạc TV hôm nay HD
+url = https://xoilaczvi.tv/
 
