--- a/images/man-tu-bung-tre-em/config.ini
+++ b/images/man-tu-bung-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-tre-em.html
 lastopen = 2024-06-07 00:52:30
 
 [search]
-lastsearch = 2024-07-21 16:28:09
+lastsearch = 2024-07-21 17:15:32
 
 [www.mantubung.com]
 match = -100.0%%
@@ -47,9 +47,9 @@ title = Mùng Tự Bung Bảo Lộc 1m8 x 2m Loại 2 Cửa Cao Cấp ...
 url = https://www.mungtubung.com/mung-tu-bung-1m8-loai-2-cua.html
 
 [mungmocmien.com]
-match = -111.1%%
-title = Mùng ngủ em bé ( mùng chụp em bé, mùng nôi em bé...)
-url = https://mungmocmien.com/collections/mung-chup-em-be
+match = -11.1%%
+title = Màn chụp em bé VIỀN CHÂN HỒNG
+url = https://mungmocmien.com/products/man-chup-tu-bung-man-chup-em-be-vien-chan-hong
 
 [tiki.vn]
 match = -11.1%%
@@ -72,9 +72,9 @@ title = Màn Chụp Chống Muỗi Tự Bung Cho Trẻ Em Evon Việt Nam
 url = https://ichikobaby.com/san-pham/man-chup-chong-muoi-tu-bung-cho-tre-em-evon-viet-nam/
 
 [www.lazada.vn]
-match = -105.6%%
-title = Màn Tự Bung Trẻ Em Giá Tốt T03/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/man-tu-bung-tre-em/?innerlink=hot_v1
+match = -83.3%%
+title = ❍﹊♟ Màn chụp tự bung người lớn trẻ em gấp gọn tiện ...
+url = https://www.lazada.vn/products/man-chup-tu-bung-nguoi-lon-tre-em-gap-gon-tien-dung-mung-chup-cho-be-ngu-chong-muoi-con-trung-size-1m8-x-2m-i1785180131.html
 
 [www.mungbaobao.com]
 match = -5.6%%
