--- a/images/vo-goi-om-es1804-80x100/config.ini
+++ b/images/vo-goi-om-es1804-80x100/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-om-es1804-80x100.html
 lastopen = 2024-07-01 14:25:38
 
 [search]
-lastsearch = 2024-07-21 15:18:33
+lastsearch = 2024-07-21 17:17:47
 
 [www.everonqb.com]
 match = -8.7%%
@@ -65,4 +65,14 @@ url = https://twitter.com/rehviie/status/1810694019623932263
 match = -108.7%%
 title = Why do the people of East Timor, Goa, Angola and Cape ...
 url = https://www.quora.com/Why-do-the-people-of-East-Timor-Goa-Angola-and-Cape-Verde-still-wave-flags-of-Portugal-when-Portugal-wins-a-football-match-despite-Portuguese-colonial-wars
+
+[audiokarma.org]
+match = -91.3%%
+title = What power supply caps to use for SX-980 - AudioKarma
+url = https://audiokarma.org/forums/index.php?threads/what-power-supply-caps-to-use-for-sx-980.190408/
+
+[www.cellartracker.com]
+match = -91.3%%
+title = 2011 Viña Ochagavia Cabernet Sauvignon Raíces Nobles
+url = https://www.cellartracker.com/wine.asp?iWine=2084936
 
