--- a/images/tham-giuong-ii-120x190/config.ini
+++ b/images/tham-giuong-ii-120x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-120x190.html
 lastopen = 2024-06-17 21:10:17
 
 [search]
-lastsearch = 2024-07-21 16:19:09
+lastsearch = 2024-07-21 17:16:47
 
 [demxanh.com]
 match = -22.7%%
-title = Thảm trải giường lông cừu TLC 06 - Hà Nội
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
+title = Thảm trải giường cao su non màu xanh nhạt
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-nhat.html
 
 [demre.com.vn]
 match = 18.2%%
@@ -47,9 +47,9 @@ title = GIƯỜNG SÔ PHA ĐA NĂNG THÔNG MINH GẤP GỌN, SOFA ...
 url = https://shopee.vn/GIƯỜNG-SÔ-PHA-ĐA-NĂNG-THÔNG-MINH-GẤP-GỌN-SOFA-GIƯỜNG-GẤP-LẠI-THÀNH-GHẾ-i.795208755.19125639155
 
 [everonhanquoc.vn]
-match = -59.1
-title = {search_title}
-url = {search_url}
+match = -59.1%%
+title = Các kích thước đệm tiêu chuẩn phổ biến nhất
+url = https://everonhanquoc.vn/tin-tuc/7262/kich-thuoc-dem-tieu-chuan
 
 [www.animemusicvideos.org]
 match = -31.8%%
@@ -92,12 +92,17 @@ title = 120cm bed for 2 people? - Japan Forum
 url = https://www.tripadvisor.com/ShowTopic-g294232-i525-k6854499-120cm_bed_for_2_people-Japan.html
 
 [comehome.com.vn]
-match = -40.9%%
-title = TOP mẫu giường tầng cho bé trai, bé gái ...
+match = -113.6%%
+title = TOP mẫu giường tầng cho bé trai, bé gái, giường tầng trẻ ...
 url = https://comehome.com.vn/blog/post/mau-giuong-tang-cho-be
 
 [www.liena.com.vn]
 match = -40.9%%
 title = 8 Kích Thước Giường Ngủ Đơn, Đôi Tiêu Chuẩn
 url = https://www.liena.com.vn/kich-thuoc-giuong-ngu-tieu-chuan
+
+[hanhtinhxanh.com.vn]
+match = 11.8%%
+title = Giường gấp có đệm
+url = https://hanhtinhxanh.com.vn/giuong-gap-co-dem.html
 
