--- a/images/bo-ga-goi-chun-xoa-2m-22/config.ini
+++ b/images/bo-ga-goi-chun-xoa-2m-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-2m-22.html
 lastopen = 2024-06-09 22:43:18
 
 [search]
-lastsearch = 2024-07-21 08:01:29
+lastsearch = 2024-07-21 17:45:22
 
 [www.diepxuan.com]
 match = -62.5%%
@@ -28,8 +28,8 @@ url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv22/
 
 [www.everonvn.vn]
 match = -87.5%%
-title = Everon ESC-22020 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-esc22020.html
+title = Everon EPM-22064 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-epm22064.html
 
 [songhongchinhhang.vn]
 match = 0.0%%
