--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-07-21 17:14:59
+lastsearch = 2024-07-21 17:50:23
 
 [hk.linkedin.com]
-match = 0.0%%
-title = Coco Chan - Hoi Lai Kok
-url = https://hk.linkedin.com/in/coco-chan-935486254
+match = -123.1%%
+title = Chan cocoo - Freelance (Self employed)
+url = https://hk.linkedin.com/in/chan-cocoo-2aa4362b1
 
 [www.instagram.com]
 match = -238.5%%
@@ -32,9 +32,9 @@ title = That Mama: Coco Chan, Founder Of Voltage PR And Co- ...
 url = https://www.sassymamahk.com/coco-chan-voltage-pr-omsa-family-life/
 
 [www.tiktok.com]
-match = -284.6%%
-title = #collage avec @Steven Chan Hoi Sing ce son me motive !#fit ...
-url = https://www.tiktok.com/@dosido6/video/7365180214156004641
+match = -307.7%%
+title = #stitch with @Steven Chan Hoi Sing I broke my leg running to ...
+url = https://www.tiktok.com/@mamakkofficial/video/7371338212553280811
 
 [admissions.hku.hk]
 match = -38.5%%
