--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-07-21 12:19:16
+lastsearch = 2024-07-21 17:52:55
 
 [www.bible.com]
-match = -64.7%%
-title = Matyu 20 | TPIPNG Bible | YouVersion
-url = https://www.bible.com/bible/3481/MAT.20.TPIPNG
+match = -88.2%%
+title = LUKA 22 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/LUK.22.MIZCLBSI
 
 [mizobibleblog.wordpress.com]
 match = -111.8%%
@@ -17,9 +17,9 @@ title = Exodus 1-40 - Mizo BIBle - WordPress.com
 url = https://mizobibleblog.wordpress.com/2017/02/24/exodus-1-40/
 
 [www.biblegateway.com]
-match = -129.4%%
-title = Matthew 20:22 NIV - “You don't know what you are
-url = https://www.biblegateway.com/passage/?search=Matthew 20:22&version=NIV
+match = -147.1%%
+title = Matthew 20:22-23 NIV - “You don't know what you are
+url = https://www.biblegateway.com/passage/?search=Matthew 20:22-23&version=NIV
 
 [mungchup.com]
 match = -100.0%%
@@ -32,9 +32,9 @@ title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
 url = https://munghoangphat.com/
 
 [www.churchofjesuschrist.org]
-match = -17.6%%
-title = Doktrin na ol Kavanen 78
-url = https://www.churchofjesuschrist.org/study/scriptures/dc-testament/dc/78?lang=tpi
+match = -205.9%%
+title = 1 Nifai 18 - The Church of Jesus Christ of Latter-day Saints
+url = https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/18?lang=tpi
 
 [scert.mizoram.gov.in]
 match = -18.2%%
@@ -47,8 +47,8 @@ title = Air Fittings & Tubing
 url = https://www.smcpneumatics.com/pdfs/smc/70AIFITTINGS.pdf
 
 [www.bibleref.com]
-match = -23.5%%
-title = What does Matthew 20:22 mean?
+match = 0.0%%
+title = 
 url = https://www.bibleref.com/Matthew/20/Matthew-20-22.html
 
 [www.youtube.com]
