--- a/images/vo-goi-om-dreamland-80x100-tencel-luxyry-sh/config.ini
+++ b/images/vo-goi-om-dreamland-80x100-tencel-luxyry-sh/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-om-dreamland-80x100-tencel-luxyry-sh.html
 lastopen = 2024-06-07 01:48:48
 
 [search]
-lastsearch = 2024-07-21 17:34:08
+lastsearch = 2024-07-21 17:49:19
 
 [www.atsv.de]
 match = -16.3%%
@@ -92,9 +92,9 @@ title = Live preview for Website
 url = https://www.designblog.de/responsive/?site=xn--b1axcfdv.xn--p1ai/fqeMB3wfe43v
 
 [www.wattpad.com]
-match = 9.3%%
-title = Dreamland Review Archive - More To Family (A)
-url = https://www.wattpad.com/amp/1222005369
+match = 11.6%%
+title = Dreamland Exchange - ✨ Audience and Genre Guide
+url = https://www.wattpad.com/1211523767-dreamland-exchange-✨-audience-and-genre-guide-✨
 
 [www.youtube.com]
 match = 7.0%%
