--- a/images/vo-goi-vuong-uc/config.ini
+++ b/images/vo-goi-vuong-uc/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/vo-goi-vuong-uc.html
 lastopen = 2024-06-06 16:45:20
 
 [search]
-lastsearch = 2024-07-21 17:17:36
+lastsearch = 2024-07-21 17:50:12
 
 [www.lazada.vn]
-match = -40.0%%
-title = Vỏ Gối Sofa Vuông Giá Tốt T06/2024
-url = https://www.lazada.vn/tag/vo-goi-sofa-vuong/?page=4
+match = -26.7%%
+title = Vỏ Gối ôm Vuông Giá Tốt T04/2024
+url = https://www.lazada.vn/tag/vo-goi-om-vuong/
 
 [shopee.vn]
-match = -180.0%%
-title = Vỏ gối vuông tựa lưng sofa 45x45cm 40x40cm Cotton 100 ...
-url = https://shopee.vn/Vỏ-gối-vuông-tựa-lưng-sofa-45x45cm-40x40cm-Cotton-100-Hàn-Quốc-cao-cấp-màu-trơn-vải-nhập-khẩu-i.394907567.21561011731
+match = -140.0%%
+title = Rẻ Vô Địch Gối vuông tựa trang trí ( Gồm vỏ + ruột
+url = https://shopee.vn/Rẻ-Vô-Địch-Gối-vuông-tựa-trang-trí-(-Gồm-vỏ-ruột-Giá-tại-xưởng)-i.18055727.785277066
 
 [jysk.vn]
 match = -166.7%%
