--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-21 12:32:52
+lastsearch = 2024-07-21 18:30:15
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -227,9 +227,9 @@ title = chelsea vs🍯 【WW88.game】Casino Online Châu Á
 url = https://hoanghaco.com.vn/ios/farmer_pyramid_summer/
 
 [www.facebook.com]
-match = 12.5%%
-title = THÔNG BÁO GAMES SHOPEE
-url = https://www.facebook.com/groups/gamesshopee/?locale=vi_VN
+match = -93.8%%
+title = Revelation: Thiên Dụ - Hội Nhà Thám Hiểm
+url = https://www.facebook.com/groups/revelation.thiendu/
 
 [baocaobang.vn]
 match = -218.8%%
