--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-07-21 12:52:15
+lastsearch = 2024-07-21 18:30:37
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -17,9 +17,9 @@ title =
 url = https://en.wikipedia.org/wiki/TUI_Group
 
 [www.tuigroup.com]
-match = -250.0%%
-title = TUI brand name may no longer be used by TUI Russia
-url = https://www.tuigroup.com/en-en/media/press-releases/2022/2022-03-10-tui-terminates-agreement
+match = -300.0%%
+title = TUI Group – The one of the world's leading tourism groups
+url = https://www.tuigroup.com/en-en
 
 [www.tui.nl]
 match = -316.7%%
@@ -410,4 +410,9 @@ url = https://www.fitchratings.com/research/corporate-finance/emea-travel-relate
 match = -200.0%%
 title = TUI
 url = https://in.linkedin.com/company/tuigroup?trk=ppro_cprof
+
+[ejuniper.com]
+match = -25.0%%
+title = TUI Infotech - Juniper
+url = https://ejuniper.com/en/clients/tui-infotech/
 
