--- a/images/tui-warmdream-15/config.ini
+++ b/images/tui-warmdream-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-15.html
 lastopen = 2024-06-10 00:24:28
 
 [search]
-lastsearch = 2024-07-21 15:49:14
+lastsearch = 2024-07-21 18:30:26
 
 [www.lazada.vn]
 match = -268.8%%
@@ -119,7 +119,7 @@ url = https://www.dailymail.co.uk/tvshowbiz/article-7671041/Rob-Kardashian-treat
 [www.facebook.com]
 match = -25.0%%
 title = Chăn ga gối đệm Điệp Xuân
-url = https://www.facebook.com/diepxuanco/?locale=nb_NO
+url = https://www.facebook.com/diepxuanco/?locale=lv_LV
 
 [extenzee.com]
 match = -262.5%%
@@ -177,8 +177,8 @@ title = kids' handle it lightning bolt rain boot - Crocs Kids Handle It Rain ...
 url = https://m.veryberryfrozenyogurt.com/blogs/mjaprkvo-147/
 
 [mechanicaldesign-job.com]
-match = -206.2%%
-title = marc jacobs men wallets - farfetch marc jacobs wallet ...
+match = -18.8%%
+title = marc jacobs men wallets
 url = https://mechanicaldesign-job.com/blogs/kkfggukv-199//
 
 [www.instagram.com]
