CI images update

--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-07-21 16:27:57
+lastsearch = 2024-07-21 19:26:13
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -54,7 +54,7 @@ url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-ra
 [books.google.com]
 match = -142.9%%
 title = The queen's printers' aids to the student of the holy Bible. ...
-url = https://books.google.com/books?id=dVBbAAAAQAAJ&pg=RA2-PA2&lpg=RA2-PA2&dq=nem+di+a+mon+9f+16+re&source=bl&ots=NeDC3AlozE&sig=ACfU3U1lwWvVtTgNWh1u8AjA-zAZkDkMtQ&hl=en&sa=X&ved=2ahUKEwirlaTa6LeHAxU6D1kFHeimBzgQ6AF6BAgeEAM
+url = https://books.google.com/books?id=dVBbAAAAQAAJ&pg=RA2-PA2&lpg=RA2-PA2&dq=nem+di+a+mon+9f+16+re&source=bl&ots=NeDC3Blvzz&sig=ACfU3U3dpJge0DO1QWDichdIglGuD0Ax9Q&hl=en&sa=X&ved=2ahUKEwiCsKnGkLiHAxXfCTQIHaR2Av0Q6AF6BAgcEAM
 
 [www.diepxuan.com]
 match = -81.0%%
