--- a/images/vo-chan-ks-uc-20-22/config.ini
+++ b/images/vo-chan-ks-uc-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-22.html
 lastopen = 2024-06-09 22:13:27
 
 [search]
-lastsearch = 2024-07-21 14:24:57
+lastsearch = 2024-07-21 19:23:41
 
 [profiles.icts.uci.edu]
 match = -7.1%%
@@ -22,14 +22,14 @@ title = Workers' Compensation Appeals Board - Panel decisions
 url = https://www.dir.ca.gov/wcab/wcab-Decisions.htm
 
 [profiles.ucsf.edu]
-match = -7.7%%
-title = Li Zhang, PhD
-url = https://profiles.ucsf.edu/li.zhang
+match = 0.0%%
+title = Serggio Lanata, MD, MS
+url = https://profiles.ucsf.edu/serggio.lanata
 
 [www.ncbi.nlm.nih.gov]
-match = -168.4%%
-title = Review of influenza-associated pulmonary aspergillosis in ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7306567/
+match = -136.8%%
+title = The role of hypogonadism in Klinefelter Syndrome - PMC
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3955327/
 
 [www.lebow.drexel.edu]
 match = -126.3%%
@@ -37,9 +37,9 @@ title = Shawkat Hammoudeh, PhD - LeBow College of Business
 url = https://www.lebow.drexel.edu/people/shawkathammoudeh
 
 [profiles.ucsd.edu]
-match = -10.5%%
-title = Gary Vilke - UCSD Profiles
-url = https://profiles.ucsd.edu/gary.vilke
+match = -41.7%%
+title = Tommi Gaines
+url = https://profiles.ucsd.edu/tommi.gaines
 
 [medboard.nv.gov]
 match = -100.0%%
@@ -72,9 +72,9 @@ title = Politics, Policy, Political News - POLITICO
 url = https://www.politico.com/
 
 [som.cuanschutz.edu]
-match = -163.2%%
-title = Robin Shandas, PhD Professor, University of Colorado - Denver
-url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/17849
+match = -126.3%%
+title = Tell Bennett, MD Professor, Biomedical Informatics
+url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/22381
 
 [cpr.heart.org]
 match = -94.7%%
@@ -332,9 +332,9 @@ title = Katie Pollard, PhD
 url = https://gladstone.org/people/katie-pollard
 
 [www.nature.com]
-match = -205.3%%
-title = Effects of high-intensity interval training on cardiometabolic ...
-url = https://www.nature.com/articles/s41391-024-00867-3
+match = -152.6%%
+title = Rapid groundwater decline and some cases of recovery in ...
+url = https://www.nature.com/articles/s41586-023-06879-8
 
 [profiles.ucla.edu]
 match = 0.0%%
@@ -375,4 +375,9 @@ url = https://www.mdanderson.org/documents/Departments-and-Divisions/Symptom-Res
 match = -89.5%%
 title = ASTROPHYSICAL IMPLICATIONS OF THE BINARY ...
 url = https://iopscience.iop.org/article/10.3847/2041-8205/818/2/L22/pdf
+
+[www.biorxiv.org]
+match = -131.6%%
+title = Molecular Landscape of Modality-Specific Exercise ...
+url = https://www.biorxiv.org/content/10.1101/2024.07.14.603458v1
 
