--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-07-21 18:16:32
+lastsearch = 2024-07-21 19:21:33
 
 [www.diepxuan.com]
-match = 12.0%%
-title = Điệp Xuân Chăn ga gối màu
+match = 3.6%%
+title = Chăn ga gối màu - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/chan-ga-goi-mau.html
 
 [shop.chanrathanhthuy.com]
@@ -62,9 +62,9 @@ title = Các mẫu chăn ga gối đệm đẹp và đáng mua nhất hiện nay
 url = https://ru9.vn/blogs/magazine/cac-mau-chan-ga-goi-dem
 
 [quoccuongmattress.vn]
-match = -57.1%%
-title = Bộ chăn ga gối cotton 3D họa tiết lông vũ dùng 2 mặt nhiều ...
-url = https://quoccuongmattress.vn/san-pham/bo-chan-ga-goi-cotton-3d-hoa-tiet-long-vu-dung-2-mat-nhieu-mau-da-dang/
+match = -60.7%%
+title = Bộ chăn ga gối cotton 3D họa tiết hoạt hình dùng 2 mặt nhiều ...
+url = https://quoccuongmattress.vn/san-pham/bo-chan-ga-goi-cotton-3d-hoa-tiet-hoat-hinh-dung-2-mat-nhieu-mau-da-dang/
 
 [demxanh.com]
 match = -42.9%%
