--- a/images/goi-om-re-to/config.ini
+++ b/images/goi-om-re-to/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/goi-om-re-to.html
 lastopen = 2024-06-10 00:44:39
 
 [search]
-lastsearch = 2024-07-21 18:15:39
+lastsearch = 2024-07-21 19:22:37
 
 [dvan.org]
 match = -41.7%%
@@ -112,9 +112,9 @@ title = When does one say “m goi” vs “do je” for thank you in ...
 url = https://www.quora.com/When-does-one-say-“m-goi”-vs-“do-je”-for-thank-you-in-Cantonese
 
 [www.instagram.com]
-match = 16.7%%
-title = Kiren Rijiju
-url = https://www.instagram.com/kiren.rijiju/?hl=en
+match = -308.3%%
+title = Rishi Sunak (@rishisunakmp) • Instagram photos and videos
+url = https://www.instagram.com/rishisunakmp/?hl=en
 
 [indianvisaonline.gov.in]
 match = -100.0%%
