--- a/images/man-tu-bung-dinh-vuong18/config.ini
+++ b/images/man-tu-bung-dinh-vuong18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong18.html
 lastopen = 2024-06-07 00:52:24
 
 [search]
-lastsearch = 2024-07-21 15:16:39
+lastsearch = 2024-07-21 19:24:49
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,14 +12,14 @@ title = Màn tự bung dinh vuong18
 url = https://www.diepxuan.com/man-tu-bung-dinh-vuong18.html
 
 [www.mungbaobao.com]
-match = 20.8%%
-title = Mùng Tự Bung Đỉnh Vuông 1m8 x 2m Viền Chân
-url = https://www.mungbaobao.com/mung-tu-bung-dinh-vuong-1m8-x-2m-bao-bao.html?sp=new
+match = 29.2%%
+title = Mùng Tự Bung Đỉnh Vuông 1m8 x 2m Bảo Bảo
+url = https://www.mungbaobao.com/mung-tu-bung-dinh-vuong-1m8-x-2m-bao-bao.html
 
 [shopee.vn]
-match = -54.2%%
-title = Màn chụp vuông - Giá Tốt, Sale Tháng 07, Ship 0 Đồng
-url = https://shopee.vn/list/màn chụp/vuông
+match = -29.2%%
+title = màn chụp vuông giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=màn chụp vuông
 
 [easydream.vn]
 match = -4.2%%
@@ -27,14 +27,14 @@ title = Màn chụp đỉnh vuông Cao Cấp EASY DREAM
 url = https://easydream.vn/man-chup-dinh-vuong-31-11.html
 
 [www.mantubung.com]
-match = -58.3%%
-title = Mùng Đỉnh Vuông Cao Cấp 1m8 x 2m x 1m7 CHÂN VIỀN
-url = https://www.mantubung.com/mung-chup-dinh-rong-1m8-x-2m-bao-bao-2-cua-67344.html
+match = -12.5%%
+title = Màn Tự Bung ĐỈNH VUÔNG 1m8 x 2m - VIỀN CHÂN - 1 CỬA
+url = https://www.mantubung.com/man-tu-bung-dinh-vuong-1m8-x-2m-x-1m8-85258.html
 
 [www.lazada.vn]
-match = -4.2%%
-title = Màn đỉnh Vuông Tự Bung Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/man-dinh-vuong-tu-bung/
+match = 20.8%%
+title = Mùng Tự Bung đỉnh Vuông Giá Tốt T07/2024
+url = https://www.lazada.vn/tag/mung-tu-bung-dinh-vuong/
 
 [munghoangphat.com]
 match = -33.3%%
