--- a/images/tui-warmdream-18/config.ini
+++ b/images/tui-warmdream-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-18.html
 lastopen = 2024-06-10 00:27:15
 
 [search]
-lastsearch = 2024-07-21 18:47:01
+lastsearch = 2024-07-21 19:25:11
 
 [www.walmart.com]
 match = -162.5%%
@@ -142,9 +142,9 @@ title = Camping Tent
 url = https://www.roadtripamerica.com/forum/showthread.php?48059-Camping-Tent
 
 [kllibrary.dbkl.gov.my]
-match = -137.5%%
-title = Search Results for Chinese Ficton, Children
-url = http://kllibrary.dbkl.gov.my/client/en_US/pkl/search/results.displaypanel.bottomtoolbar.pagination.ajaxordirectlink:handlepagingviasearchsession/1?qu=Chinese+Ficton,+Children&pe=r:1&ic=true&ps=300
+match = -125.0%%
+title = Search Results for Children Chinese Fiction
+url = http://kllibrary.dbkl.gov.my/client/en_US/pkl/search/results.displaypanel.bottomtoolbar.pagination.selectpage:handlepagingviasearchsession/1?qu=Children+Chinese+Fiction&ic=true&ps=300
 
 [www.lemon8-app.com]
 match = -118.8%%
