--- a/images/vo-chan-ks-uc-20-230/config.ini
+++ b/images/vo-chan-ks-uc-20-230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-230.html
 lastopen = 2024-06-10 00:43:14
 
 [search]
-lastsearch = 2024-07-21 18:47:53
+lastsearch = 2024-07-21 19:26:02
 
 [www.dir.ca.gov]
 match = -28.6%%
@@ -12,9 +12,9 @@ title = Lien Claimants
 url = https://www.dir.ca.gov/ftproot/EAMSLienClaimants.txt
 
 [profiles.ucsf.edu]
-match = 10.0%%
-title = Joan Hilton, DSc, MPH
-url = https://profiles.ucsf.edu/joan.hilton
+match = -80.0%%
+title = Matthew Cooperberg, MD, MPH - UCSF Profiles
+url = https://profiles.ucsf.edu/matthew.cooperberg
 
 [cityofclovis.com]
 match = -65.0%%
@@ -27,9 +27,9 @@ title = App by School
 url = https://studentaid.gov/sites/default/files/fsawg/datacenter/library/2023-2024-app-data-by-school-q6.xls
 
 [www.ncbi.nlm.nih.gov]
-match = -145.0%%
-title = Stem cell-based multi-tissue platforms to model human ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9587366/
+match = -170.0%%
+title = Exposure to environmentally persistent free radicals during ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4935140/
 
 [www.energy.gov]
 match = -95.0%%
@@ -152,9 +152,9 @@ title = PowerFlex 750-Series AC Drives Reference Manual
 url = https://literature.rockwellautomation.com/idc/groups/literature/documents/rm/750-rm002_-en-p.pdf
 
 [som.cuanschutz.edu]
-match = -150.0%%
-title = D. Ross Camidge, MD, PhD - School of Medicine - CU Anschutz
-url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/18871
+match = -135.0%%
+title = Steve Abman, MD Professor, Pediatrics-Pulmonary Medicine
+url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/5902
 
 [vc2040.org]
 match = -145.0%%
@@ -217,8 +217,8 @@ title = Fei-Fei Li - Stanford Profiles
 url = https://profiles.stanford.edu/fei-fei-li
 
 [profiles.sc-ctsi.org]
-match = -80.0%%
-title = Paul Thompson - USC Health Sciences Profiles
+match = -5.0%%
+title = Paul Thompson - USC Profiles
 url = https://profiles.sc-ctsi.org/paul.thompson
 
 [www.nrc.gov]
@@ -380,4 +380,9 @@ url = https://www.partstown.com/blakeslee/uc-20/diagram
 match = 5.0%%
 title = HP computer speakers UC-230
 url = https://www.ebay.com/itm/184432807281
+
+[www.westernu.edu]
+match = -80.0%%
+title = Western University of Health Sciences ( ...
+url = https://www.westernu.edu/mediafiles/registrar/catalog-archives/complete0203.pdf
 
