--- a/images/chieu-cay-moc-hoa16/config.ini
+++ b/images/chieu-cay-moc-hoa16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa16.html
 lastopen = 2024-06-09 22:42:25
 
 [search]
-lastsearch = 2024-07-21 18:27:04
+lastsearch = 2024-07-21 19:56:51
 
 [eva.vn]
 match = -131.6%%
@@ -22,9 +22,9 @@ title = cây hoa mộc giá tốt Tháng 6, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=cây hoa mộc
 
 [mocnhienfarm.com]
-match = -7.7%%
-title = Cây pháo bông
-url = https://mocnhienfarm.com/products/cay-phao-bong
+match = 21.1%%
+title = Hoa chiều tím hồng cao C1
+url = https://mocnhienfarm.com/products/hoa-chieu-tim
 
 [tapchivietnamhuongsac.vn]
 match = -73.7%%
