--- a/images/tham-nhung-bali-160x230/config.ini
+++ b/images/tham-nhung-bali-160x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-160x230.html
 lastopen = 2024-06-07 00:35:43
 
 [search]
-lastsearch = 2024-07-21 12:52:04
+lastsearch = 2024-07-21 20:03:46
 
 [demxanh.com]
 match = 0.0%%
@@ -19,7 +19,7 @@ url = https://www.lazada.vn/products/mua-tham-nhan-qua-tham-li-bali-tham-trai-sa
 [tiki.vn]
 match = -65.2%%
 title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm mới
-url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-moi-p41436661.html?spid=41436690
+url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-moi-p41436661.html?spid=41436661
 
 [thegioidemviet.vn]
 match = -65.2%%
@@ -32,9 +32,9 @@ title = Thảm nhung Bali 160x230
 url = https://www.diepxuan.com/tham-nhung-bali-160x230.html
 
 [shopee.vn]
-match = -117.4%%
-title = thảm lì bali in họa tiết 5d cao cấp trang trí phòng khách ...
-url = https://shopee.vn/Thảm-trải-sàn-thảm-lì-bali-in-họa-tiết-5d-cao-cấp-trang-trí-phòng-khách-phòng-ngủ-i.401842224.9433903363
+match = -73.9%%
+title = Xả Kho tết thảm bali hàng nhập màu nét chuẩn loại 1
+url = https://shopee.vn/Xả-Kho-tết-thảm-bali-hàng-nhập-màu-nét-chuẩn-loại-1-i.31906508.8906680164
 
 [www.noithatpassion.com]
 match = -73.9%%
