--- a/images/tham-nhung-bali-2m-3m/config.ini
+++ b/images/tham-nhung-bali-2m-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-2m-3m.html
 lastopen = 2024-06-09 22:34:54
 
 [search]
-lastsearch = 2024-07-21 16:30:33
+lastsearch = 2024-07-21 19:57:05
 
 [noithathomy.com]
 match = -42.9%%
@@ -12,19 +12,19 @@ title = Thảm nỉ Bali 2m x 3m TNHM02 | Hàng nhâp khẩu
 url = https://noithathomy.com/san-pham/tham-ni-bali-2m-x-3m-tnhm02/
 
 [shopee.vn]
-match = -100.0%%
-title = 50 Mẫu Thảm 2m x 3m Thảm Nỉ Bali Trải Sàn Trải Phòng ...
-url = https://shopee.vn/Tặng-Thảm-Lau-Chân-50-Mẫu-Thảm-2m-x-3m-Thảm-Nỉ-Bali-Trải-Sàn-Trải-Phòng-Khách-Phòng-Ngủ-Sang-Trọng-i.848657871.23586650302
+match = -81.0%%
+title = Tặng Thảm Lau Chân - 100 Mẫu Thảm 2m x 3m Thảm Nỉ ...
+url = https://shopee.vn/Tặng-Thảm-Lau-Chân-100-Mẫu-Thảm-2m-x-3m-Thảm-Nỉ-Bali-Trải-Sàn-Trải-Phòng-Khách-Phòng-Ngủ-Sang-Trọng-i.22156385.4432151796
 
 [www.lazada.vn]
-match = 23.8%%
-title = Thảm bali 2m x 3m cao cấp
-url = https://www.lazada.vn/products/tham-bali-2m-x-3m-cao-cap-i2597386188.html
+match = -76.2%%
+title = Thảm trải sàn phòng khách THẢM TRANH BALI LOẠI 2M x ...
+url = https://www.lazada.vn/products/tham-trai-san-phong-khach-tham-tranh-bali-loai-2m-x-3m-i356266333.html
 
 [tiki.vn]
-match = -128.6%%
-title = Thảm trải sàn, thảm lì Bali, thảm trang trí phòng khách 2m x ...
-url = https://tiki.vn/tham-trai-san-tham-li-bali-tham-trang-tri-phong-khach-2m-x-3m-p76292949.html
+match = -85.7%%
+title = Thảm nỉ BALI trải sàn loại 2m x 3m mẫu hoàng gia nhí đỏ
+url = https://tiki.vn/tham-ni-bali-trai-san-loai-2m-x-3m-mau-hoang-gia-nhi-do-p89638672.html
 
 [muachunghaiphong.com]
 match = 0.0%%
