CI images update

--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-21 20:13:40
+lastsearch = 2024-07-21 20:30:55
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -109,7 +109,7 @@ url = https://cryptonews.com/news/bitcoin-miner-terawulf-clears-debt-plans-opera
 [www.google.com]
 match = 0.0%%
 title = 
-url = https://www.google.com/search?sca_esv=9980f8d855368397&q=Did+Nam+Joo+Hyuk+go+to+college?&sa=X&ved=2ahUKEwjTuqvOh6-HAxWfD1kFHY5XDx0QsZYEegQISRAC
+url = https://www.google.com/search?sca_esv=17d6a8cd139b7cdd&q=Did+Nam+Joo+Hyuk+go+to+college?&sa=X&ved=2ahUKEwjX5cmBn7iHAxXCGFkFHe1bDDgQsZYEegQISRAC
 
 [files.eric.ed.gov]
 match = -115.0%%
@@ -267,9 +267,9 @@ title = 'I told him to shut up' - Ronaldo explains furious reaction ...
 url = https://www.goal.com/en/news/i-told-him-to-shut-up-ronaldo-explains-furious-reaction-substitution-portugal-world-cup-defeat-south-korea/bltf2de10573a9f05e8
 
 [en.yna.co.kr]
-match = -160.0%%
-title = (Olympics) Confusion reigns after chaotic finish in short ...
-url = https://en.yna.co.kr/view/AEN20180213013100315
+match = -155.0%%
+title = (2nd LD) PM: THAAD deployment 'difficult yet inevitable ...
+url = https://en.yna.co.kr/view/AEN20170907001852315
 
 [www.vlr.gg]
 match = 5.6%%
