--- a/images/vo-chan-ks-uc-20-230/config.ini
+++ b/images/vo-chan-ks-uc-20-230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-230.html
 lastopen = 2024-06-10 00:43:14
 
 [search]
-lastsearch = 2024-07-21 19:26:02
+lastsearch = 2024-07-21 20:35:02
 
 [www.dir.ca.gov]
 match = -28.6%%
@@ -12,9 +12,9 @@ title = Lien Claimants
 url = https://www.dir.ca.gov/ftproot/EAMSLienClaimants.txt
 
 [profiles.ucsf.edu]
-match = -80.0%%
-title = Matthew Cooperberg, MD, MPH - UCSF Profiles
-url = https://profiles.ucsf.edu/matthew.cooperberg
+match = 10.0%%
+title = Joan Hilton, DSc, MPH
+url = https://profiles.ucsf.edu/joan.hilton
 
 [cityofclovis.com]
 match = -65.0%%
@@ -27,9 +27,9 @@ title = App by School
 url = https://studentaid.gov/sites/default/files/fsawg/datacenter/library/2023-2024-app-data-by-school-q6.xls
 
 [www.ncbi.nlm.nih.gov]
-match = -170.0%%
-title = Exposure to environmentally persistent free radicals during ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4935140/
+match = -115.0%%
+title = Therapy and Cardiovascular Toxicity in Cancer - PMC
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6028047/
 
 [www.energy.gov]
 match = -95.0%%
