--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-21 12:35:19
+lastsearch = 2024-07-21 20:29:09
 
 [tiki.vn]
 match = -138.9%%
@@ -17,9 +17,9 @@ title = Kích thước 160x200
 url = http://nemxinh.net/filter/chan-ga+160x200
 
 [www.everonvn.vn]
-match = -188.9%%
-title = Everon ESB-22054 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-esb22054.html
+match = -183.3%%
+title = Everon EPM-22060 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-epm22060.html
 
 [lavendervn.com]
 match = -22.2%%
@@ -42,9 +42,9 @@ title = Bộ ga chun Cotton chống thấm màu xám đậm
 url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xam-dam.html
 
 [foreverbedding.net]
-match = -61.1%%
-title = Bộ ga phủ Common C119 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-phu-common-c119
+match = -94.4%%
+title = Bộ ga phủ tròn Mystic-T 28 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-phu-tron-mystic-t-28
 
 [aeoneshop.com]
 match = -105.6%%
