--- a/images/man-re-trang-12/config.ini
+++ b/images/man-re-trang-12/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/man-re-trang-12.html
 lastopen = 2024-06-07 00:52:43
 
 [search]
-lastsearch = 2024-07-21 17:17:07
+lastsearch = 2024-07-21 20:29:21
 
 [burningman.org]
-match = -60.0%%
-title = The 10 Principles of Burning Man
+match = 0.0%%
+title = 
 url = https://burningman.org/about/10-principles/
 
 [www.usatoday.com]
@@ -817,9 +817,9 @@ title = Alameda County Sheriff's Office, CA | Home
 url = https://www.alamedacountysheriff.org/
 
 [www.sos.state.mn.us]
-match = -166.7%%
-title = Minnesota Secretary Of State - Vote early by mail
-url = https://www.sos.state.mn.us/elections-voting/other-ways-to-vote/vote-early-by-mail/
+match = -153.3%%
+title = Minnesota Secretary Of State - Register To Vote
+url = https://www.sos.state.mn.us/elections-voting/register-to-vote/
 
 [www.nih.gov]
 match = -260.0%%
