--- a/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm.h
 lastopen = 2024-06-30 21:10:28
 
 [search]
-lastsearch = 2024-07-21 20:00:46
+lastsearch = 2024-07-21 20:33:14
 
 [www.everonvn.vn]
 match = 7.4%%
@@ -42,9 +42,9 @@ title = Nệm Lò Xo Everon - Đà Nẵng
 url = https://suongtuyet.com/nem-lo-xo-everon
 
 [www.everonqb.com]
-match = -270.0%%
-title = Nệm Everon
-url = https://www.everonqb.com/catalog/category/view/s/n-m-everon/id/2013/
+match = 40.0%%
+title = Nệm lò xo Everon Bonnell 200x220x23
+url = https://www.everonqb.com/nem-lo-xo-everon-bonnell-200x220x23.html
 
 [www.diepxuan.com]
 match = 57.4%%
