--- a/images/tham-ni-xop-mau-60/config.ini
+++ b/images/tham-ni-xop-mau-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-mau-60.html
 lastopen = 2024-06-06 16:51:51
 
 [search]
-lastsearch = 2024-07-21 15:52:33
+lastsearch = 2024-07-21 20:30:11
 
 [thamaulac.com.vn]
 match = -88.9%%
@@ -17,9 +17,9 @@ title = Thảm xốp trải sàn 60x60 họa tiết tranh giao thông cao cấp 
 url = https://xoptraisan.info/tham-xop-tranh-giao-thong-60x60
 
 [thamvinhthuan.com]
-match = -105.6%%
-title = Thảm Xốp Một Màu - Thảm Trải Sàn Vĩnh Thuận TPHCM
-url = https://thamvinhthuan.com/danh-muc/tham-xop/tham-xop-mot-mau/
+match = 16.7%%
+title = Thảm xốp một màu 60cm x 60 cm
+url = https://thamvinhthuan.com/san-pham/tham-xop-mot-mau-van-caro-60-x-60-cm/
 
 [trieuchau.com]
 match = -61.1%%
@@ -27,9 +27,9 @@ title = Thảm Trải Sàn TPHCM - THẢM XỐP MÀU 60X60X1.2CM
 url = http://trieuchau.com/en-us/1057/27906/Tham-xop-60x60cm/THAM-XOP-MAU-60X60X12CM
 
 [shopee.vn]
-match = -100.0%%
-title = Thảm Xốp Ghép Sàn, Thảm Nỉ Ghép Sàn Tường Lâm 60*60
-url = https://shopee.vn/Thảm-Xốp-Ghép-Sàn-Thảm-Nỉ-Ghép-Sàn-Tường-Lâm-60*60-Hàng-Việt-Nam-10-Tâm-Bịch-i.167631306.14814457758
+match = -111.1%%
+title = thảm ghép 60x60cm giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=thảm ghép 60x60cm
 
 [vatlieulotsan.com]
 match = -27.8%%
