--- a/images/chan-hoi-to-ong/config.ini
+++ b/images/chan-hoi-to-ong/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-to-ong.html
 lastopen = 2024-06-09 23:18:52
 
 [search]
-lastsearch = 2024-07-21 15:33:38
+lastsearch = 2024-07-21 21:16:42
 
 [www.instagram.com]
 match = -6.7%%
@@ -47,9 +47,9 @@ title = CHAN Hoi-man
 url = https://www.soc.cuhk.edu.hk/profile/chan-hoi-man/
 
 [hk.linkedin.com]
-match = -186.7%%
-title = Chor-Hoi Chan - Harbin Institute of Technology, Shenzhen
-url = https://hk.linkedin.com/in/chor-hoi-chan-69a46b104
+match = -220.0%%
+title = Hoi Wai Chan - 香港流動通訊有限公司
+url = https://hk.linkedin.com/in/hoi-wai-chan-48754b54
 
 [www.polyu.edu.hk]
 match = -160.0%%
