--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-21 18:52:33
+lastsearch = 2024-07-21 21:19:13
 
 [www.tiktok.com]
 match = -11.8%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -194.1%%
-title = Bradshaw's General Railway and Steam Navigation Guide for ...
-url = https://books.google.com/books?id=6R8pAAAAYAAJ&pg=PA131&lpg=PA131&dq=man+in+hoa+dep+16&source=bl&ots=rUQ5BtAC36&sig=ACfU3U2J6UQZ_J1_hvMiQ3y9NqqB3DVjZg&hl=en&sa=X&ved=2ahUKEwjVjdea37eHAxWAElkFHSN7DjkQ6AF6BAgaEAM
+match = -58.8%%
+title = George Broomhall's Corn Trade News
+url = https://books.google.com/books?id=p5lKAAAAYAAJ&pg=PA193&lpg=PA193&dq=man+in+hoa+dep+16&source=bl&ots=sPDkiMuJj4&sig=ACfU3U2T4DMnFyk2DFoX-2ZYCgYWW8LDHg&hl=en&sa=X&ved=2ahUKEwiepqjnqbiHAxUuEVkFHWpsAjUQ6AF6BAgfEAM
 
 [tax.vermont.gov]
 match = -29.4%%
