--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-07-21 18:30:46
+lastsearch = 2024-07-21 21:19:04
 
 [www.gov.uk]
 match = -200.0%%
@@ -940,4 +940,9 @@ url = https://pressofatlanticcity.com/
 match = 0.0%%
 title = 
 url = https://www.mncourts.gov/Access-Case-Records/MCRO.aspx
+
+[casarevista.com]
+match = 0.0%%
+title = 
+url = https://casarevista.com/7993/news/new-movie-no-more-closing-of-the-rohnert-park-theater/
 
