--- a/images/ruot-nem-korea-160x200x09/config.ini
+++ b/images/ruot-nem-korea-160x200x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-160x200x09.html
 lastopen = 2024-06-10 12:38:50
 
 [search]
-lastsearch = 2024-07-21 15:46:46
+lastsearch = 2024-07-21 21:17:49
 
 [www.diepxuan.com]
 match = 28.0%%
@@ -22,9 +22,9 @@ title =
 url = https://www.linkedin.com/pulse/how-get-job-korea-non-korean-again-ross-harman
 
 [www.youtube.com]
-match = -64.0%%
-title = EXTENSIVE TOUR OF ALL THE BEST FOOD IN SEOUL ...
-url = https://www.youtube.com/watch?v=VnDxsqL5AuE
+match = -92.0%%
+title = The Biggest Shopping Mall in Korea! | No Brand vs Brand ...
+url = https://www.youtube.com/watch?v=hEE2D218TRI
 
 [english.seoul.go.kr]
 match = 0.0%%
@@ -39,7 +39,7 @@ url = https://www.britannica.com/place/Seoul
 [en.wikipedia.org]
 match = 0.0%%
 title = 
-url = https://en.wikipedia.org/wiki/Joseon
+url = https://en.wikipedia.org/wiki/Names_of_Korea
 
 [rusticpathways.com]
 match = 0.0%%
@@ -62,9 +62,9 @@ title =
 url = https://www.futurelearn.com/info/courses/fun-in-korea/0/steps/266331
 
 [www.lemon8-app.com]
-match = -4.0%%
-title = pasta for less than $10 in seoul
-url = https://www.lemon8-app.com/charmaineelim/7256706063171355138?region=sg
+match = -8.0%%
+title = Kalau tak pergi Korea, aku takkan tahu
+url = https://www.lemon8-app.com/thebadassreader/7285176488180122114?region=gb
 
 [www.bambootravel.co.uk]
 match = 0.0%%
@@ -92,9 +92,9 @@ title = Itinerary for 9 days in Korea - Seoul, Busan and Jeju Island
 url = https://www.tripadvisor.com/ShowTopic-g294197-i8161-k6013844-Itinerary_for_9_days_in_Korea_Seoul_Busan_and_Jeju_Island-Seoul.html
 
 [www.quora.com]
-match = 0.0%%
-title = 
-url = https://www.quora.com/Are-Koreans-allowed-to-marry-Africans-or-other-ethnicities
+match = -60.0%%
+title = Why did Wal-Mart leave Germany and South Korea?
+url = https://www.quora.com/Why-did-Wal-Mart-leave-Germany-and-South-Korea
 
 [blog.uceap.universityofcalifornia.edu]
 match = 0.0%%
@@ -120,4 +120,9 @@ url = https://www.tripadvisor.com.ph/ShowTopic-g294197-i8161-k5825114-Big_proble
 match = -84.0%%
 title = & watching my money gone in a flash 🙃📍TOMATO (Gangnam ...
 url = https://www.tiktok.com/@daisybunch_/video/7241899982658292993
+
+[en.tripadvisor.com.hk]
+match = -88.0%%
+title = MAGNATE, Busan - Restaurant Reviews, Photos & Phone ...
+url = https://en.tripadvisor.com.hk/Restaurant_Review-g297884-d21285343-Reviews-Magnate-Busan.html
 
