--- a/images/tham-giuong-ii-120x190/config.ini
+++ b/images/tham-giuong-ii-120x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-120x190.html
 lastopen = 2024-06-17 21:10:17
 
 [search]
-lastsearch = 2024-07-21 17:16:47
+lastsearch = 2024-07-21 21:17:04
 
 [demxanh.com]
 match = -22.7%%
@@ -37,9 +37,9 @@ title = Kích thước giường ngủ chuẩn theo phong thủy
 url = https://cafeland.vn/xu-huong/kich-thuoc-giuong-ngu-chuan-theo-phong-thuy-91091.html
 
 [www.diepxuan.com]
-match = 13.6%%
-title = Thảm giường Bode 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
+match = 36.4%%
+title = Thảm giường nỉ 140x190 - Điệp Xuân
+url = https://www.diepxuan.com/tham-giuong-ni-140x190.html
 
 [shopee.vn]
 match = -81.8%%
