CI images update

--- a/images/vo-goi-dreamland-50x70-tr/config.ini
+++ b/images/vo-goi-dreamland-50x70-tr/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-dreamland-50x70-tr.html
 lastopen = 2024-06-07 00:26:33
 
 [search]
-lastsearch = 2024-07-21 16:32:15
+lastsearch = 2024-07-21 21:36:50
 
 [furlife.vn]
 match = 70.8%%
@@ -155,4 +155,9 @@ url = http://www.24hgold.com/english/link_company.aspx?param=website&id=73940803
 match = -88.0%%
 title = News educations days Marywood Ranks Among Best Flight ...
 url = http://www.y1tyzksk.com/index3.php?name=https://xn----7sbpggckxyhggn0ksbh.xn--p1ai/ouAFIVNO53fe
+
+[www.pastis.org]
+match = -80.0%%
+title = 2024 Huber heights movies rave west - distillyarium.ru
+url = https://www.pastis.org/jade/cgi-bin/reframe.pl?https://distillyarium.ru/3672549fe4fe43y
 
