CI images update

--- a/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-200x220-tr.html
 lastopen = 2024-06-07 00:24:25
 
 [search]
-lastsearch = 2024-07-21 18:29:52
+lastsearch = 2024-07-21 21:50:36
 
 [everon.online]
 match = 50.0%%
@@ -12,14 +12,14 @@ title = Bộ Ga Chun Chần Everon Bốn Mùa ...
 url = https://everon.online/blogs/news/bo-ga-chun-chan-everon-bon-mua-bo-ga-boc-chan-everon-moi-nhat
 
 [everonvn.com.vn]
-match = -17.6%%
-title = Bộ chăn ga chun, gối Everon SR-03 chất liệu 100%% cotton ...
-url = https://everonvn.com.vn/everon/2241/bo-chan-ga-chun-everon-sr-03
+match = -4.3%%
+title = Bộ chăn ga Everon SR-16
+url = https://everonvn.com.vn/everon/2248/bo-chan-ga-everon-sr-16
 
 [tiki.vn]
-match = 32.4%%
-title = Mua Bộ ga chun chần bốn mùa Everon EPM22072 ( 01 ...
-url = https://tiki.vn/bo-ga-chun-chan-bon-mua-everon-epm22072-01-ga-chun-chan-01-chan-bon-mua-200x220-02-vo-goi-45x65-p132829428.html
+match = 29.4%%
+title = Mua Bộ ga chun chần bốn mùa Everon EPC22045 ( 01 ...
+url = https://tiki.vn/bo-ga-chun-chan-bon-mua-everon-epc22045-01-ga-chun-chan-01-chan-bon-mua-200x220-02-vo-goi-45x65-p132829385.html?spid=132829392
 
 [everonhanquoc.com.vn]
 match = -26.5%%
@@ -78,8 +78,8 @@ url = https://changagoidemsonghong.com/chan-ga-goi-bc61
 
 [www.everonvn.vn]
 match = -32.4%%
-title = Everon EPM-24062 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-epm24062.html
+title = Everon EST-22032 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-est22032.html
 
 [demxanh.com]
 match = -2.9%%
