--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-21 19:27:20
+lastsearch = 2024-07-21 21:52:53
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -47,9 +47,9 @@ title = nhà cái uy tín ♐️【WW88.game】Casino Online
 url = https://hoanghaco.com.vn/muv/F08bet.xhtml
 
 [www.youtube.com]
-match = -106.2%%
-title = EM TÌNH CHÀO CẢ NHÀ 0383456504 TRƯA 20/7
-url = https://www.youtube.com/watch?v=E0QTdYhqmrU
+match = -200.0%%
+title = Vietnamese Baguette Recipe - BÁNH MÌ VIỆT NAM - KNEAD ...
+url = https://www.youtube.com/watch?v=yzQ6rCK8pJw
 
 [saigontourist.edu.vn]
 match = -162.5%%
@@ -555,4 +555,9 @@ url = https://tanhkhong.org/p105a1654/11/thich-khong-chieu-nho-dinh-thao-chot
 match = -193.8%%
 title = Võ Lâm Truyền Kỳ 2 | Game Online Kiếm Hiệp Nhập Vai Hay
 url = https://volam2.zing.vn/index.html
+
+[nhuoclac.com]
+match = 12.5%%
+title = bình thường thôi
+url = https://nhuoclac.com/tag/nhuoc-lac/
 
