--- a/images/chan-4-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-4-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:17:35
 
 [search]
-lastsearch = 2024-07-21 09:46:25
+lastsearch = 2024-07-21 21:48:19
 
 [shopee.vn]
 match = 0.0%%
@@ -12,14 +12,14 @@ title = CHĂN LÔNG TUYẾT SỊN THÁI LAN 3KG HAI LỚP IN HOA ...
 url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-SỊN-THÁI-LAN-3KG-HAI-LỚP-IN-HOA-CAO-CẤP-i.169744499.6052072833
 
 [www.lazada.vn]
-match = -22.2%%
-title = Chăn Nhung 4kg Giá Tốt T06/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chan-nhung-4kg/
+match = 22.2%%
+title = Chăn Lông Tuyết 5kg Giá Tốt T07/2024
+url = https://www.lazada.vn/tag/chan-long-tuyet-5kg/
 
 [tiki.vn]
-match = 7.4%%
-title = Chăn lông 4 kg hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chăn lông 4 kg
+match = 11.1%%
+title = Chăn nhung tuyết hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chăn nhung tuyết
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -147,9 +147,9 @@ title = CHĂN LÔNG GẤU TUYẾT BẮC CỰC XÁM (SINGLE) - Lasante
 url = https://lasantevn.com/chan-long-gau-tuyet-bac-cuc-xam-1-mat-lasante-phap/
 
 [demxanh.com]
-match = -18.5%%
-title = Chăn tuyết Hàn Quốc Soft 2kg màu trắng hình tim
-url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-mau-trang-hinh-tim.html
+match = 11.1%%
+title = Chăn tuyết Hàn Quốc Soft 2kg kẻ hồng
+url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-ke-hong.html
 
 [vnvc.vn]
 match = -59.3%%
