--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-07-21 20:51:28
+lastsearch = 2024-07-21 21:51:08
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -230,4 +230,9 @@ url = http://ansinh.com.vn/News.aspx?NewsID=584&CatID=1&TypeID=1
 match = -53.6%%
 title = Thông tin về kết quả thực hiện nhiệm vụ cấp quốc gia ...
 url = https://www.most.gov.vn/vn/tin-tuc/21076/thong-tin-ve-ket-qua-thuc-hien-nhiem-vu-cap-quoc-gia--nghien-cuu-phat-trien-cay-dia-hoang-rehmannia-glutinosa-theo-huong-dan-gacp-.aspx
+
+[drdaochum.wordpress.com]
+match = 39.3%%
+title = Chiều cao vẫn còn tăng trưởng |
+url = https://drdaochum.wordpress.com/a-phương-phap-tang-chiều-cao/chiều-cao-vẫn-con-tang-trưởng/
 
