--- a/images/tham-chan-len-xu-1-50x80/config.ini
+++ b/images/tham-chan-len-xu-1-50x80/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-50x80.html
 lastopen = 2024-06-07 00:36:50
 
 [search]
-lastsearch = 2024-07-21 20:47:01
+lastsearch = 2024-07-21 21:48:30
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Thảm lau chân kích thước 50x80 hàng chính hãng, giao ...
 url = https://tiki.vn/search?q=thảm lau chân kích thước 50x80
 
 [shopee.vn]
-match = -12.5%%
-title = thảm lau chân chống trơn trượt kích thước 50x80
-url = https://shopee.vn/Thảm-lau-chân-siêu-thấm-hút-nước-5s-thảm-lau-chân-chống-trơn-trượt-kích-thước-50x80-i.351179465.22661027123
+match = -41.7%%
+title = Thảm chùi chân chữ HOME cỡ 50x80, thấm hút phong ...
+url = https://shopee.vn/Thảm-chùi-chân-chữ-HOME-cỡ-50x80-thấm-hút-phong-cách-Nhật-Bản-i.66569981.10269870886
 
 [lepetit.com.vn]
 match = -79.2%%
@@ -97,7 +97,7 @@ title = Thảm lau chân OZZY Màu Xám Trắng 50x80 cm 100%% cotton
 url = https://sieuthinguyenkim.com/tham-lau-chan-ozzy-mau-xam-trang-nti272045259.html
 
 [dienmaycholon.com]
-match = -100.0%%
-title = Sony Android Tivi 4K 50 Inch KD-50X80J/S giá rẻ, giao ngay
-url = https://dienmaycholon.com/tivi/sony-android-tivi-4k-50-inch-kd50x80js
+match = -83.3%%
+title = Google Tivi Sony 4K 50 Inch KD-50X80K giá rẻ, giao ngay
+url = https://dienmaycholon.com/tivi/google-tivi-sony-4k-50-inch-kd50x80k
 
