--- a/images/vo-goi-ke-xoa-re-khong-chan/config.ini
+++ b/images/vo-goi-ke-xoa-re-khong-chan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-xoa-re-khong-chan.html
 lastopen = 2024-06-10 00:42:44
 
 [search]
-lastsearch = 2024-07-21 21:16:11
+lastsearch = 2024-07-21 21:45:55
 
 [www.youtube.com]
 match = -40.7%%
@@ -17,9 +17,9 @@ title = Phân Loại Vỏ Gối Theo Chất Liệu - Ưu, Nhược Điểm Từn
 url = https://ru9.vn/blogs/magazine/phan-loai-vo-goi-theo-chat-lieu-uu-nhuoc-diem-tung-loai
 
 [jysk.vn]
-match = -37.0%%
-title = Vỏ Gối Nằm, Gối Ôm Bền Đẹp, Hiện Đại, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/vo-goi
+match = -59.3%%
+title = Vỏ Chăn Ga Gối Trơn, Cotton Cao Cấp Bền, Đẹp Giá Rẻ | JYSK
+url = https://jysk.vn/bo-vo-chan-goi-cotton-det-tron
 
 [elambo.vn]
 match = -3.7%%
@@ -47,9 +47,9 @@ title = [Mẹo vặt] Cách làm phồng ruột gối tại nhà đơn giản, h
 url = https://demxanh.com/cach-lam-phong-ruot-goi.html
 
 [www.thegioididong.com]
-match = -63.0%%
-title = Cách chặn, bỏ chặn Facebook trên điện thoại, máy tính ...
-url = https://www.thegioididong.com/hoi-dap/huong-dan-chan-va-huy-chan-tai-khoan-facebook-1037037
+match = -55.6%%
+title = Cách xóa chặn cuộc gọi trên iPhone, điện thoại Android ...
+url = https://www.thegioididong.com/hoi-dap/tat-che-do-chan-cuoc-goi-tren-samsung-galaxy-note-604459
 
 [dienmaycholon.vn]
 match = -44.4%%
