--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-21 21:52:53
+lastsearch = 2024-07-21 22:37:27
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -560,4 +560,9 @@ url = https://volam2.zing.vn/index.html
 match = 12.5%%
 title = bình thường thôi
 url = https://nhuoclac.com/tag/nhuoc-lac/
+
+[www.wattpad.com]
+match = -143.8%%
+title = [AllKook 18+] Wild Night - Fanboy x Jungkook
+url = https://www.wattpad.com/773030894-allkook-18+-wild-night-fanboy-x-jungkook
 
