--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-21 12:51:31
+lastsearch = 2024-07-21 22:33:59
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -63,13 +63,13 @@ url = https://moveek.com/rap/lotte-kosmo-tay-ho/
 
 [baolongan.vn]
 match = -31.2%%
-title = Giữ nghề dệt chiếu Long Cang
-url = https://baolongan.vn/giu-nghe-det-chieu-long-cang-a169502.html
+title = Nhớ nghề dệt chiếu quê tôi
+url = https://baolongan.vn/nho-nghe-det-chieu-que-toi-a168262.html
 
 [www.youtube.com]
-match = -200.0%%
-title = Bán Trà Đá 15K Chơi Chiêu Tráo 500K Đụng Ngay Con Trai ...
-url = https://www.youtube.com/watch?v=MIO-5nY_e5g
+match = -106.2%%
+title = Tuyệt chiêu chống rụng quả cho cây cam | VTC16
+url = https://www.youtube.com/watch?v=D5B7MtNy_kM
 
 [books.google.com]
 match = -231.2%%
