--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-07-21 21:19:04
+lastsearch = 2024-07-21 22:36:54
 
 [www.gov.uk]
 match = -200.0%%
@@ -852,9 +852,9 @@ title =
 url = https://football-ranking.com/rankByConfederation?zone=AFC&period=
 
 [www.coe.edu]
-match = -233.3%%
-title = Coe College: One of the Best Small Colleges in the Country
-url = https://www.coe.edu/
+match = 0.0%%
+title = 
+url = https://www.coe.edu/why-coe
 
 [www.endocrine.org]
 match = -73.3%%
@@ -945,4 +945,19 @@ url = https://www.mncourts.gov/Access-Case-Records/MCRO.aspx
 match = 0.0%%
 title = 
 url = https://casarevista.com/7993/news/new-movie-no-more-closing-of-the-rohnert-park-theater/
+
+[www.lottenypalace.com]
+match = -253.3%%
+title = Lotte New York Palace | Hotels in Manhattan | Official Website
+url = https://www.lottenypalace.com/
+
+[www.imf.org]
+match = -73.3%%
+title = International Monetary Fund (IMF)
+url = https://www.imf.org/en/Home
+
+[www.saisd.net]
+match = 26.7%%
+title = San Antonio ISD
+url = https://www.saisd.net/
 
