--- a/images/man-tu-bung-tre-em/config.ini
+++ b/images/man-tu-bung-tre-em/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-tre-em.html
 lastopen = 2024-06-07 00:52:30
 
 [search]
-lastsearch = 2024-07-21 20:31:36
+lastsearch = 2024-07-21 22:35:04
 
 [www.mantubung.com]
-match = -105.6%%
-title = Mùng em bé chống muỗi đa năng cho trẻ em - Mùng Chụp
-url = https://www.mantubung.com/mung-em-be.html
+match = -100.0%%
+title = Màn trẻ em tự bung chống muỗi đa năng 80cm * 100cm
+url = https://www.mantubung.com/man-tre-em-tu-bung-chong-muoi-da-nang-84845.html
 
 [manbinhminh.com]
 match = -144.4%%
@@ -17,9 +17,9 @@ title = Màn chống muỗi cho bé gấp gọn dễ dàng bao quản, mùng ...
 url = https://manbinhminh.com/2509/man-chong-muoi-cho-be-gap-gon-de-dang-bao-quan-mung-chup-tu-bung.aspx
 
 [shopee.vn]
-match = -111.1%%
-title = Màn mùng chụp tư bung gấp gọn tiện dụng chống muỗi ...
-url = https://shopee.vn/Màn-mùng-chụp-tư-bung-gấp-gọn-tiện-dụng-chống-muỗi-cho-bé-sơ-sinh-bé-lớn-trẻ-em-hiệu-quả-cao-cấp-i.229089803.10442621837
+match = -100.0%%
+title = màn chụp cho bé giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=màn chụp cho bé
 
 [h5.lazada.vn]
 match = -33.3%%
@@ -47,9 +47,9 @@ title = Mùng Tự Bung Bảo Lộc 1m8 x 2m Loại 2 Cửa Cao Cấp ...
 url = https://www.mungtubung.com/mung-tu-bung-1m8-loai-2-cua.html
 
 [mungmocmien.com]
-match = -155.6%%
-title = Mùng ngủ cao cấp Mộc Miên ( cung cấp mùng chụp tự bung ...
-url = https://mungmocmien.com/
+match = -11.1%%
+title = Màn chụp em bé VIỀN CHÂN HỒNG
+url = https://mungmocmien.com/products/man-chup-tu-bung-man-chup-em-be-vien-chan-hong
 
 [tiki.vn]
 match = -11.1%%
