--- a/images/nem-pyeoda-thuong-18/config.ini
+++ b/images/nem-pyeoda-thuong-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-18.html
 lastopen = 2024-06-18 17:45:17
 
 [search]
-lastsearch = 2024-07-21 21:15:28
+lastsearch = 2024-07-21 22:33:36
 
 [www.facebook.com]
 match = -45.0%%
@@ -17,9 +17,9 @@ title = Chăn ga gối Singapore Pyeoda LCHARME gấm 7 món PL18
 url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-lcharme-gam-7-mon-pl18.html
 
 [www.khodemthanhdo.com]
-match = 5.0%%
-title = Bộ chăn ga gối pyeoda
-url = https://www.khodemthanhdo.com/collections/bo-chan-ga-goi-phu-pyeoda
+match = -8.3%%
+title = ĐỆM THÀNH ĐÔ
+url = https://www.khodemthanhdo.com/
 
 [pyeoda.vn]
 match = -95.0%%
@@ -90,4 +90,9 @@ url = https://www.tiktok.com/@cookingoutlao/video/7190147033838210346
 match = -80.0%%
 title = DeAnda Germany | Natural at 48 yeah about that👍🏾💯🤷🏽‍♂️
 url = https://www.instagram.com/meshepoo/reel/Cl7jLn0I7ET/
+
+[remdemgiaphat.com]
+match = -75.0%%
+title = Chăn ga gối Tencel Pyeoda Hàn Quốc đa sắc 5 món 18
+url = https://remdemgiaphat.com/chan-ga-goi-tencel-pyeoda-han-quoc-da-sac-5-mon-18/
 
