--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-21 21:52:32
+lastsearch = 2024-07-21 22:31:34
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -22,8 +22,8 @@ title = Riot is cutting back budget on esports? : r/leagueoflegends
 url = https://www.reddit.com/r/leagueoflegends/comments/9aqbes/riot_is_cutting_back_budget_on_esports/
 
 [en.wikipedia.org]
-match = -33.3%%
-title = Nam Joo-hyuk
+match = 0.0%%
+title = 
 url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
 
 [www.facebook.com]
